commit bilingual contents

--- a/docs/docs-ref-autogen/excel_1_6/excel/excel.conditionalpresetcriteriarule.yml
+++ b/docs/docs-ref-autogen/excel_1_6/excel/excel.conditionalpresetcriteriarule.yml
@@ -1,23 +1,23 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: excel.Excel.ConditionalPresetCriteriaRule
+  - uid: 'excel!Excel.ConditionalPresetCriteriaRule:interface'
     summary: |-
-      <span data-ttu-id="a553d-101">代表 "预置条件" 条件格式规则</span><span class="sxs-lookup"><span data-stu-id="a553d-101">Represents the Preset Criteria Conditional Format Rule</span></span>
+      <span data-ttu-id="e3ee1-101">代表 "预置条件" 条件格式规则</span><span class="sxs-lookup"><span data-stu-id="e3ee1-101">Represents the Preset Criteria Conditional Format Rule</span></span>
 
-      <span data-ttu-id="a553d-102">\[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a553d-102">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="e3ee1-102">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e3ee1-102">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: Excel.ConditionalPresetCriteriaRule
     fullName: Excel.ConditionalPresetCriteriaRule
     langs:
       - typeScript
     type: interface
-    package: excel
+    package: excel!
     children:
-      - excel.Excel.ConditionalPresetCriteriaRule.criterion
-  - uid: excel.Excel.ConditionalPresetCriteriaRule.criterion
+      - 'excel!Excel.ConditionalPresetCriteriaRule#criterion:member'
+  - uid: 'excel!Excel.ConditionalPresetCriteriaRule#criterion:member'
     summary: |-
-      <span data-ttu-id="a553d-103">条件格式的条件。</span><span class="sxs-lookup"><span data-stu-id="a553d-103">The criterion of the conditional format.</span></span>
+      <span data-ttu-id="e3ee1-103">条件格式的条件。</span><span class="sxs-lookup"><span data-stu-id="e3ee1-103">The criterion of the conditional format.</span></span>
 
-      <span data-ttu-id="a553d-104">\[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a553d-104">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="e3ee1-104">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e3ee1-104">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: criterion
     fullName: criterion
     langs:
@@ -27,11 +27,11 @@ items:
       content: 'criterion: Excel.ConditionalFormatPresetCriterion | "Invalid" | "Blanks" | "NonBlanks" | "Errors" | "NonErrors" | "Yesterday" | "Today" | "Tomorrow" | "LastSevenDays" | "LastWeek" | "ThisWeek" | "NextWeek" | "LastMonth" | "ThisMonth" | "NextMonth" | "AboveAverage" | "BelowAverage" | "EqualOrAboveAverage" | "EqualOrBelowAverage" | "OneStdDevAboveAverage" | "OneStdDevBelowAverage" | "TwoStdDevAboveAverage" | "TwoStdDevBelowAverage" | "ThreeStdDevAboveAverage" | "ThreeStdDevBelowAverage" | "UniqueValues" | "DuplicateValues";'
       return:
         type:
-          - Excel.ConditionalFormatPresetCriterion | "Invalid" | "Blanks" | "NonBlanks" | "Errors" | "NonErrors" | "Yesterday" | "Today" | "Tomorrow" | "LastSevenDays" | "LastWeek" | "ThisWeek" | "NextWeek" | "LastMonth" | "ThisMonth" | "NextMonth" | "AboveAverage" | "BelowAverage" | "EqualOrAboveAverage" | "EqualOrBelowAverage" | "OneStdDevAboveAverage" | "OneStdDevBelowAverage" | "TwoStdDevAboveAverage" | "TwoStdDevBelowAverage" | "ThreeStdDevAboveAverage" | "ThreeStdDevBelowAverage" | "UniqueValues" | "DuplicateValues"
+          - 'excel!Excel.ConditionalPresetCriteriaRule#criterion~0:complex'
         description: |-
 
 
-          #### <a name="examples"></a><span data-ttu-id="a553d-105">示例</span><span class="sxs-lookup"><span data-stu-id="a553d-105">Examples</span></span>
+          #### <a name="examples"></a><span data-ttu-id="e3ee1-105">示例</span><span class="sxs-lookup"><span data-stu-id="e3ee1-105">Examples</span></span>
 
           ```typescript
           await Excel.run(async (context) => {
@@ -45,3 +45,13 @@ items:
               await context.sync();
           });
           ```
+references:
+  - uid: 'excel!Excel.ConditionalPresetCriteriaRule#criterion~0:complex'
+    name: Excel.ConditionalFormatPresetCriterion | "Invalid" | "Blanks" | "NonBlanks" | "Errors" | "NonErrors" | "Yesterday" | "Today" | "Tomorrow" | "LastSevenDays" | "LastWeek" | "ThisWeek" | "NextWeek" | "LastMonth" | "ThisMonth" | "NextMonth" | "AboveAverage" | "BelowAverage" | "EqualOrAboveAverage" | "EqualOrBelowAverage" | "OneStdDevAboveAverage" | "OneStdDevBelowAverage" | "TwoStdDevAboveAverage" | "TwoStdDevBelowAverage" | "ThreeStdDevAboveAverage" | "ThreeStdDevBelowAverage" | "UniqueValues" | "DuplicateValues"
+    fullName: Excel.ConditionalFormatPresetCriterion | "Invalid" | "Blanks" | "NonBlanks" | "Errors" | "NonErrors" | "Yesterday" | "Today" | "Tomorrow" | "LastSevenDays" | "LastWeek" | "ThisWeek" | "NextWeek" | "LastMonth" | "ThisMonth" | "NextMonth" | "AboveAverage" | "BelowAverage" | "EqualOrAboveAverage" | "EqualOrBelowAverage" | "OneStdDevAboveAverage" | "OneStdDevBelowAverage" | "TwoStdDevAboveAverage" | "TwoStdDevBelowAverage" | "ThreeStdDevAboveAverage" | "ThreeStdDevBelowAverage" | "UniqueValues" | "DuplicateValues"
+    spec.typeScript:
+      - uid: 'excel!Excel.ConditionalFormatPresetCriterion:enum'
+        name: Excel.ConditionalFormatPresetCriterion
+        fullName: Excel.ConditionalFormatPresetCriterion
+      - name: ' | "Invalid" | "Blanks" | "NonBlanks" | "Errors" | "NonErrors" | "Yesterday" | "Today" | "Tomorrow" | "LastSevenDays" | "LastWeek" | "ThisWeek" | "NextWeek" | "LastMonth" | "ThisMonth" | "NextMonth" | "AboveAverage" | "BelowAverage" | "EqualOrAboveAverage" | "EqualOrBelowAverage" | "OneStdDevAboveAverage" | "OneStdDevBelowAverage" | "TwoStdDevAboveAverage" | "TwoStdDevBelowAverage" | "ThreeStdDevAboveAverage" | "ThreeStdDevBelowAverage" | "UniqueValues" | "DuplicateValues"'
+        fullName: ' | "Invalid" | "Blanks" | "NonBlanks" | "Errors" | "NonErrors" | "Yesterday" | "Today" | "Tomorrow" | "LastSevenDays" | "LastWeek" | "ThisWeek" | "NextWeek" | "LastMonth" | "ThisMonth" | "NextMonth" | "AboveAverage" | "BelowAverage" | "EqualOrAboveAverage" | "EqualOrBelowAverage" | "OneStdDevAboveAverage" | "OneStdDevBelowAverage" | "TwoStdDevAboveAverage" | "TwoStdDevBelowAverage" | "ThreeStdDevAboveAverage" | "ThreeStdDevBelowAverage" | "UniqueValues" | "DuplicateValues"'
