--- a/docs/docs-ref-autogen/excel_1_6/excel/excel.interfaces.nameditemupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_6/excel/excel.interfaces.nameditemupdatedata.yml
@@ -1,21 +1,21 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: excel.Excel.Interfaces.NamedItemUpdateData
-    summary: '<span data-ttu-id="dc1d5-101">一个用于更新 NamedItem 对象上的数据的接口, 可用于 "namedItem (</span><span class="sxs-lookup"><span data-stu-id="dc1d5-101">An interface for updating data on the NamedItem object, for use in "namedItem.set(</span></span><!-- --><span data-ttu-id="dc1d5-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="dc1d5-102"></span></span><!-- --><span data-ttu-id="dc1d5-103">)".</span><span class="sxs-lookup"><span data-stu-id="dc1d5-103"></span></span>'
+  - uid: 'excel!Excel.Interfaces.NamedItemUpdateData:interface'
+    summary: '<span data-ttu-id="15360-101">一个用于更新 NamedItem 对象上的数据的接口，可用于 "namedItem （</span><span class="sxs-lookup"><span data-stu-id="15360-101">An interface for updating data on the NamedItem object, for use in "namedItem.set(</span></span><!-- --><span data-ttu-id="15360-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="15360-102"></span></span><!-- --><span data-ttu-id="15360-103">)".</span><span class="sxs-lookup"><span data-stu-id="15360-103"></span></span>'
     name: Excel.Interfaces.NamedItemUpdateData
     fullName: Excel.Interfaces.NamedItemUpdateData
     langs:
       - typeScript
     type: interface
-    package: excel
+    package: excel!
     children:
-      - excel.Excel.Interfaces.NamedItemUpdateData.comment
-      - excel.Excel.Interfaces.NamedItemUpdateData.visible
-  - uid: excel.Excel.Interfaces.NamedItemUpdateData.comment
+      - 'excel!Excel.Interfaces.NamedItemUpdateData#comment:member'
+      - 'excel!Excel.Interfaces.NamedItemUpdateData#visible:member'
+  - uid: 'excel!Excel.Interfaces.NamedItemUpdateData#comment:member'
     summary: |-
-      <span data-ttu-id="dc1d5-104">表示与此名称相关联的注释。</span><span class="sxs-lookup"><span data-stu-id="dc1d5-104">Represents the comment associated with this name.</span></span>
+      <span data-ttu-id="15360-104">表示与此名称相关联的注释。</span><span class="sxs-lookup"><span data-stu-id="15360-104">Represents the comment associated with this name.</span></span>
 
-      <span data-ttu-id="dc1d5-105">\[[API 集: ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="dc1d5-105">\[ [API set: ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="15360-105">\[[API 集： ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="15360-105">\[ [API set: ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: comment
     fullName: comment
     langs:
@@ -26,11 +26,11 @@ items:
       return:
         type:
           - string
-  - uid: excel.Excel.Interfaces.NamedItemUpdateData.visible
+  - uid: 'excel!Excel.Interfaces.NamedItemUpdateData#visible:member'
     summary: |-
-      <span data-ttu-id="dc1d5-106">指定对象是否可见。</span><span class="sxs-lookup"><span data-stu-id="dc1d5-106">Specifies whether the object is visible or not.</span></span>
+      <span data-ttu-id="15360-106">指定对象是否可见。</span><span class="sxs-lookup"><span data-stu-id="15360-106">Specifies whether the object is visible or not.</span></span>
 
-      <span data-ttu-id="dc1d5-107">\[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="dc1d5-107">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="15360-107">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="15360-107">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: visible
     fullName: visible
     langs:
