--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.charttrendlineformatdata.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.charttrendlineformatdata.yml
@@ -1,20 +1,20 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: excel.Excel.Interfaces.ChartTrendlineFormatData
-    summary: <span data-ttu-id="6fe13-101">描述通过调用 "chartTrendlineFormat ()" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="6fe13-101">An interface describing the data returned by calling "chartTrendlineFormat.toJSON()".</span></span>
+  - uid: 'excel!Excel.Interfaces.ChartTrendlineFormatData:interface'
+    summary: <span data-ttu-id="d2106-101">描述通过调用 "chartTrendlineFormat （）" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="d2106-101">An interface describing the data returned by calling "chartTrendlineFormat.toJSON()".</span></span>
     name: Excel.Interfaces.ChartTrendlineFormatData
     fullName: Excel.Interfaces.ChartTrendlineFormatData
     langs:
       - typeScript
     type: interface
-    package: excel
+    package: excel!
     children:
-      - excel.Excel.Interfaces.ChartTrendlineFormatData.line
-  - uid: excel.Excel.Interfaces.ChartTrendlineFormatData.line
+      - 'excel!Excel.Interfaces.ChartTrendlineFormatData#line:member'
+  - uid: 'excel!Excel.Interfaces.ChartTrendlineFormatData#line:member'
     summary: |-
-      <span data-ttu-id="6fe13-102">表示图表线条格式。</span><span class="sxs-lookup"><span data-stu-id="6fe13-102">Represents chart line formatting.</span></span> <span data-ttu-id="6fe13-103">只读。</span><span class="sxs-lookup"><span data-stu-id="6fe13-103">Read-only.</span></span>
+      <span data-ttu-id="d2106-102">表示图表线条格式。</span><span class="sxs-lookup"><span data-stu-id="d2106-102">Represents chart line formatting.</span></span> <span data-ttu-id="d2106-103">只读。</span><span class="sxs-lookup"><span data-stu-id="d2106-103">Read-only.</span></span>
 
-      <span data-ttu-id="6fe13-104">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6fe13-104">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="d2106-104">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d2106-104">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: line
     fullName: line
     langs:
@@ -24,4 +24,7 @@ items:
       content: 'line?: Excel.Interfaces.ChartLineFormatData;'
       return:
         type:
-          - excel.Excel.Interfaces.ChartLineFormatData
+          - 'excel!Excel.Interfaces.ChartLineFormatData:interface'
+references:
+  - uid: 'excel!Excel.Interfaces.ChartLineFormatData:interface'
+    name: Excel.Interfaces.ChartLineFormatData
