--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.commentreplydata.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.commentreplydata.yml
@@ -1,25 +1,25 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: excel.Excel.Interfaces.CommentReplyData
-    summary: <span data-ttu-id="a7ad7-101">描述通过调用 "commentReply ()" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="a7ad7-101">An interface describing the data returned by calling "commentReply.toJSON()".</span></span>
+  - uid: 'excel!Excel.Interfaces.CommentReplyData:interface'
+    summary: <span data-ttu-id="9fef8-101">描述通过调用 "commentReply （）" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="9fef8-101">An interface describing the data returned by calling "commentReply.toJSON()".</span></span>
     name: Excel.Interfaces.CommentReplyData
     fullName: Excel.Interfaces.CommentReplyData
     langs:
       - typeScript
     type: interface
-    package: excel
+    package: excel!
     children:
-      - excel.Excel.Interfaces.CommentReplyData.authorEmail
-      - excel.Excel.Interfaces.CommentReplyData.authorName
-      - excel.Excel.Interfaces.CommentReplyData.content
-      - excel.Excel.Interfaces.CommentReplyData.creationDate
-      - excel.Excel.Interfaces.CommentReplyData.id
-      - excel.Excel.Interfaces.CommentReplyData.resolved
-  - uid: excel.Excel.Interfaces.CommentReplyData.authorEmail
+      - 'excel!Excel.Interfaces.CommentReplyData#authorEmail:member'
+      - 'excel!Excel.Interfaces.CommentReplyData#authorName:member'
+      - 'excel!Excel.Interfaces.CommentReplyData#content:member'
+      - 'excel!Excel.Interfaces.CommentReplyData#creationDate:member'
+      - 'excel!Excel.Interfaces.CommentReplyData#id:member'
+      - 'excel!Excel.Interfaces.CommentReplyData#resolved:member'
+  - uid: 'excel!Excel.Interfaces.CommentReplyData#authorEmail:member'
     summary: |-
-      <span data-ttu-id="a7ad7-102">获取批注回复作者的电子邮件。</span><span class="sxs-lookup"><span data-stu-id="a7ad7-102">Gets the email of the comment reply's author.</span></span>
+      <span data-ttu-id="9fef8-102">获取批注回复作者的电子邮件。</span><span class="sxs-lookup"><span data-stu-id="9fef8-102">Gets the email of the comment reply's author.</span></span>
 
-      <span data-ttu-id="a7ad7-103">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a7ad7-103">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="9fef8-103">\[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9fef8-103">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     isPreview: true
     name: authorEmail
     fullName: authorEmail
@@ -31,11 +31,11 @@ items:
       return:
         type:
           - string
-  - uid: excel.Excel.Interfaces.CommentReplyData.authorName
+  - uid: 'excel!Excel.Interfaces.CommentReplyData#authorName:member'
     summary: |-
-      <span data-ttu-id="a7ad7-104">获取批注回复作者的姓名。</span><span class="sxs-lookup"><span data-stu-id="a7ad7-104">Gets the name of the comment reply's author.</span></span>
+      <span data-ttu-id="9fef8-104">获取批注回复作者的姓名。</span><span class="sxs-lookup"><span data-stu-id="9fef8-104">Gets the name of the comment reply's author.</span></span>
 
-      <span data-ttu-id="a7ad7-105">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a7ad7-105">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="9fef8-105">\[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9fef8-105">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     isPreview: true
     name: authorName
     fullName: authorName
@@ -47,11 +47,11 @@ items:
       return:
         type:
           - string
-  - uid: excel.Excel.Interfaces.CommentReplyData.content
+  - uid: 'excel!Excel.Interfaces.CommentReplyData#content:member'
     summary: |-
-      <span data-ttu-id="a7ad7-106">获取或设置批注回复的内容。</span><span class="sxs-lookup"><span data-stu-id="a7ad7-106">Gets or sets the comment reply's content.</span></span> <span data-ttu-id="a7ad7-107">字符串为纯文本。</span><span class="sxs-lookup"><span data-stu-id="a7ad7-107">The string is plain text.</span></span>
+      <span data-ttu-id="9fef8-106">获取或设置批注回复的内容。</span><span class="sxs-lookup"><span data-stu-id="9fef8-106">Gets or sets the comment reply's content.</span></span> <span data-ttu-id="9fef8-107">字符串为纯文本。</span><span class="sxs-lookup"><span data-stu-id="9fef8-107">The string is plain text.</span></span>
 
-      <span data-ttu-id="a7ad7-108">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a7ad7-108">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="9fef8-108">\[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9fef8-108">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     isPreview: true
     name: content
     fullName: content
@@ -63,11 +63,11 @@ items:
       return:
         type:
           - string
-  - uid: excel.Excel.Interfaces.CommentReplyData.creationDate
+  - uid: 'excel!Excel.Interfaces.CommentReplyData#creationDate:member'
     summary: |-
-      <span data-ttu-id="a7ad7-109">获取批注回复的创建时间。</span><span class="sxs-lookup"><span data-stu-id="a7ad7-109">Gets the creation time of the comment reply.</span></span>
+      <span data-ttu-id="9fef8-109">获取批注回复的创建时间。</span><span class="sxs-lookup"><span data-stu-id="9fef8-109">Gets the creation time of the comment reply.</span></span>
 
-      <span data-ttu-id="a7ad7-110">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a7ad7-110">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="9fef8-110">\[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9fef8-110">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     isPreview: true
     name: creationDate
     fullName: creationDate
@@ -78,12 +78,12 @@ items:
       content: 'creationDate?: Date;'
       return:
         type:
-          - Date
-  - uid: excel.Excel.Interfaces.CommentReplyData.id
+          - '!Date:interface'
+  - uid: 'excel!Excel.Interfaces.CommentReplyData#id:member'
     summary: |-
-      <span data-ttu-id="a7ad7-111">表示批注回复标识符。</span><span class="sxs-lookup"><span data-stu-id="a7ad7-111">Represents the comment reply identifier.</span></span> <span data-ttu-id="a7ad7-112">只读。</span><span class="sxs-lookup"><span data-stu-id="a7ad7-112">Read-only.</span></span>
+      <span data-ttu-id="9fef8-111">表示批注回复标识符。</span><span class="sxs-lookup"><span data-stu-id="9fef8-111">Represents the comment reply identifier.</span></span> <span data-ttu-id="9fef8-112">只读。</span><span class="sxs-lookup"><span data-stu-id="9fef8-112">Read-only.</span></span>
 
-      <span data-ttu-id="a7ad7-113">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a7ad7-113">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="9fef8-113">\[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9fef8-113">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     isPreview: true
     name: id
     fullName: id
@@ -95,11 +95,11 @@ items:
       return:
         type:
           - string
-  - uid: excel.Excel.Interfaces.CommentReplyData.resolved
+  - uid: 'excel!Excel.Interfaces.CommentReplyData#resolved:member'
     summary: |-
-      <span data-ttu-id="a7ad7-114">获取或设置批注答复状态。</span><span class="sxs-lookup"><span data-stu-id="a7ad7-114">Gets or sets the comment reply status.</span></span> <span data-ttu-id="a7ad7-115">值为 "true" 表示批注答复处于 "已解决" 状态。</span><span class="sxs-lookup"><span data-stu-id="a7ad7-115">A value of "true" means the comment reply is in the resolved state.</span></span>
+      <span data-ttu-id="9fef8-114">获取或设置批注答复状态。</span><span class="sxs-lookup"><span data-stu-id="9fef8-114">Gets or sets the comment reply status.</span></span> <span data-ttu-id="9fef8-115">值为 "true" 表示批注答复处于 "已解决" 状态。</span><span class="sxs-lookup"><span data-stu-id="9fef8-115">A value of "true" means the comment reply is in the resolved state.</span></span>
 
-      <span data-ttu-id="a7ad7-116">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a7ad7-116">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="9fef8-116">\[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9fef8-116">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     isPreview: true
     name: resolved
     fullName: resolved
@@ -111,3 +111,6 @@ items:
       return:
         type:
           - boolean
+references:
+  - uid: '!Date:interface'
+    name: Date
