--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.conditionaldatabarnegativeformatupdatedata.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.conditionaldatabarnegativeformatupdatedata.yml
@@ -1,23 +1,23 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: excel.Excel.Interfaces.ConditionalDataBarNegativeFormatUpdateData
-    summary: '<span data-ttu-id="4cc4f-101">一个用于更新 ConditionalDataBarNegativeFormat 对象上的数据的接口, 可用于 "conditionalDataBarNegativeFormat (</span><span class="sxs-lookup"><span data-stu-id="4cc4f-101">An interface for updating data on the ConditionalDataBarNegativeFormat object, for use in "conditionalDataBarNegativeFormat.set(</span></span><!-- --><span data-ttu-id="4cc4f-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="4cc4f-102"></span></span><!-- --><span data-ttu-id="4cc4f-103">)".</span><span class="sxs-lookup"><span data-stu-id="4cc4f-103"></span></span>'
+  - uid: 'excel!Excel.Interfaces.ConditionalDataBarNegativeFormatUpdateData:interface'
+    summary: '<span data-ttu-id="1880c-101">一个用于更新 ConditionalDataBarNegativeFormat 对象上的数据的接口，可用于 "conditionalDataBarNegativeFormat （</span><span class="sxs-lookup"><span data-stu-id="1880c-101">An interface for updating data on the ConditionalDataBarNegativeFormat object, for use in "conditionalDataBarNegativeFormat.set(</span></span><!-- --><span data-ttu-id="1880c-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="1880c-102"></span></span><!-- --><span data-ttu-id="1880c-103">)".</span><span class="sxs-lookup"><span data-stu-id="1880c-103"></span></span>'
     name: Excel.Interfaces.ConditionalDataBarNegativeFormatUpdateData
     fullName: Excel.Interfaces.ConditionalDataBarNegativeFormatUpdateData
     langs:
       - typeScript
     type: interface
-    package: excel
+    package: excel!
     children:
-      - excel.Excel.Interfaces.ConditionalDataBarNegativeFormatUpdateData.borderColor
-      - excel.Excel.Interfaces.ConditionalDataBarNegativeFormatUpdateData.fillColor
-      - excel.Excel.Interfaces.ConditionalDataBarNegativeFormatUpdateData.matchPositiveBorderColor
-      - excel.Excel.Interfaces.ConditionalDataBarNegativeFormatUpdateData.matchPositiveFillColor
-  - uid: excel.Excel.Interfaces.ConditionalDataBarNegativeFormatUpdateData.borderColor
+      - 'excel!Excel.Interfaces.ConditionalDataBarNegativeFormatUpdateData#borderColor:member'
+      - 'excel!Excel.Interfaces.ConditionalDataBarNegativeFormatUpdateData#fillColor:member'
+      - 'excel!Excel.Interfaces.ConditionalDataBarNegativeFormatUpdateData#matchPositiveBorderColor:member'
+      - 'excel!Excel.Interfaces.ConditionalDataBarNegativeFormatUpdateData#matchPositiveFillColor:member'
+  - uid: 'excel!Excel.Interfaces.ConditionalDataBarNegativeFormatUpdateData#borderColor:member'
     summary: |-
-      <span data-ttu-id="4cc4f-104">代表\#RRGGBB (例如 "FFA500") 或命名的 HTML 颜色 (例如 "橙色") 的边框线条颜色的 HTML 颜色代码。</span><span class="sxs-lookup"><span data-stu-id="4cc4f-104">HTML color code representing the color of the border line, of the form \#RRGGBB (e.g. "FFA500") or as a named HTML color (e.g. "orange").</span></span> <span data-ttu-id="4cc4f-105">如果不存在或设置了边框, 则为 "空字符串"。</span><span class="sxs-lookup"><span data-stu-id="4cc4f-105">"Empty String" if no border is present or set.</span></span>
+      <span data-ttu-id="1880c-104">代表\#RRGGBB （例如 "FFA500"）或命名的 HTML 颜色（例如 "橙色"）的边框线条颜色的 HTML 颜色代码。</span><span class="sxs-lookup"><span data-stu-id="1880c-104">HTML color code representing the color of the border line, of the form \#RRGGBB (e.g. "FFA500") or as a named HTML color (e.g. "orange").</span></span> <span data-ttu-id="1880c-105">如果不存在或设置了边框，则为 "空字符串"。</span><span class="sxs-lookup"><span data-stu-id="1880c-105">"Empty String" if no border is present or set.</span></span>
 
-      <span data-ttu-id="4cc4f-106">\[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="4cc4f-106">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="1880c-106">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1880c-106">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: borderColor
     fullName: borderColor
     langs:
@@ -28,11 +28,11 @@ items:
       return:
         type:
           - string
-  - uid: excel.Excel.Interfaces.ConditionalDataBarNegativeFormatUpdateData.fillColor
+  - uid: 'excel!Excel.Interfaces.ConditionalDataBarNegativeFormatUpdateData#fillColor:member'
     summary: |-
-      <span data-ttu-id="4cc4f-107">代表\#RRGGBB 的填充颜色的 HTML 颜色代码 (例如 "FFA500") 或命名的 HTML 颜色 (例如 "橙色")。</span><span class="sxs-lookup"><span data-stu-id="4cc4f-107">HTML color code representing the fill color, of the form \#RRGGBB (e.g. "FFA500") or as a named HTML color (e.g. "orange").</span></span>
+      <span data-ttu-id="1880c-107">代表\#RRGGBB 的填充颜色的 HTML 颜色代码（例如 "FFA500"）或命名的 HTML 颜色（例如 "橙色"）。</span><span class="sxs-lookup"><span data-stu-id="1880c-107">HTML color code representing the fill color, of the form \#RRGGBB (e.g. "FFA500") or as a named HTML color (e.g. "orange").</span></span>
 
-      <span data-ttu-id="4cc4f-108">\[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="4cc4f-108">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="1880c-108">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1880c-108">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: fillColor
     fullName: fillColor
     langs:
@@ -43,11 +43,11 @@ items:
       return:
         type:
           - string
-  - uid: excel.Excel.Interfaces.ConditionalDataBarNegativeFormatUpdateData.matchPositiveBorderColor
+  - uid: 'excel!Excel.Interfaces.ConditionalDataBarNegativeFormatUpdateData#matchPositiveBorderColor:member'
     summary: |-
-      <span data-ttu-id="4cc4f-109">该布尔值表示负 DataBar 是否与正 DataBar 具有相同边框颜色。</span><span class="sxs-lookup"><span data-stu-id="4cc4f-109">Boolean representation of whether or not the negative DataBar has the same border color as the positive DataBar.</span></span>
+      <span data-ttu-id="1880c-109">该布尔值表示负 DataBar 是否与正 DataBar 具有相同边框颜色。</span><span class="sxs-lookup"><span data-stu-id="1880c-109">Boolean representation of whether or not the negative DataBar has the same border color as the positive DataBar.</span></span>
 
-      <span data-ttu-id="4cc4f-110">\[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="4cc4f-110">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="1880c-110">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1880c-110">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: matchPositiveBorderColor
     fullName: matchPositiveBorderColor
     langs:
@@ -58,11 +58,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.ConditionalDataBarNegativeFormatUpdateData.matchPositiveFillColor
+  - uid: 'excel!Excel.Interfaces.ConditionalDataBarNegativeFormatUpdateData#matchPositiveFillColor:member'
     summary: |-
-      <span data-ttu-id="4cc4f-111">该布尔值表示负 DataBar 是否与正 DataBar 具有相同填充颜色。</span><span class="sxs-lookup"><span data-stu-id="4cc4f-111">Boolean representation of whether or not the negative DataBar has the same fill color as the positive DataBar.</span></span>
+      <span data-ttu-id="1880c-111">该布尔值表示负 DataBar 是否与正 DataBar 具有相同填充颜色。</span><span class="sxs-lookup"><span data-stu-id="1880c-111">Boolean representation of whether or not the negative DataBar has the same fill color as the positive DataBar.</span></span>
 
-      <span data-ttu-id="4cc4f-112">\[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="4cc4f-112">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="1880c-112">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1880c-112">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: matchPositiveFillColor
     fullName: matchPositiveFillColor
     langs:
