--- a/docs/docs-ref-autogen/excel_1_4/excel/excel.interfaces.shapefontupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_4/excel/excel.interfaces.shapefontupdatedata.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: excel.Excel.Interfaces.ShapeFontUpdateData
-    summary: '<span data-ttu-id="1cdeb-101">一个用于更新 ShapeFont 对象上的数据的接口, 可用于 "shapeFont (</span><span class="sxs-lookup"><span data-stu-id="1cdeb-101">An interface for updating data on the ShapeFont object, for use in "shapeFont.set(</span></span><!-- --><span data-ttu-id="1cdeb-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="1cdeb-102"></span></span><!-- --><span data-ttu-id="1cdeb-103">)".</span><span class="sxs-lookup"><span data-stu-id="1cdeb-103"></span></span>'
+  - uid: 'excel!Excel.Interfaces.ShapeFontUpdateData:interface'
+    summary: '<span data-ttu-id="b4344-101">一个用于更新 ShapeFont 对象上的数据的接口，可用于 "shapeFont （</span><span class="sxs-lookup"><span data-stu-id="b4344-101">An interface for updating data on the ShapeFont object, for use in "shapeFont.set(</span></span><!-- --><span data-ttu-id="b4344-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="b4344-102"></span></span><!-- --><span data-ttu-id="b4344-103">)".</span><span class="sxs-lookup"><span data-stu-id="b4344-103"></span></span>'
     name: Excel.Interfaces.ShapeFontUpdateData
     fullName: Excel.Interfaces.ShapeFontUpdateData
     langs:
       - typeScript
     type: interface
-    package: excel
+    package: excel!
