--- a/docs/docs-ref-autogen/excel_1_4/excel/excel.interfaces.tablecolumnupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_4/excel/excel.interfaces.tablecolumnupdatedata.yml
@@ -1,21 +1,21 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: excel.Excel.Interfaces.TableColumnUpdateData
-    summary: '<span data-ttu-id="6e0e4-101">一个用于更新 TableColumn 对象上的数据的接口, 可用于 "tableColumn (</span><span class="sxs-lookup"><span data-stu-id="6e0e4-101">An interface for updating data on the TableColumn object, for use in "tableColumn.set(</span></span><!-- --><span data-ttu-id="6e0e4-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="6e0e4-102"></span></span><!-- --><span data-ttu-id="6e0e4-103">)".</span><span class="sxs-lookup"><span data-stu-id="6e0e4-103"></span></span>'
+  - uid: 'excel!Excel.Interfaces.TableColumnUpdateData:interface'
+    summary: '<span data-ttu-id="782de-101">一个用于更新 TableColumn 对象上的数据的接口，可用于 "tableColumn （</span><span class="sxs-lookup"><span data-stu-id="782de-101">An interface for updating data on the TableColumn object, for use in "tableColumn.set(</span></span><!-- --><span data-ttu-id="782de-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="782de-102"></span></span><!-- --><span data-ttu-id="782de-103">)".</span><span class="sxs-lookup"><span data-stu-id="782de-103"></span></span>'
     name: Excel.Interfaces.TableColumnUpdateData
     fullName: Excel.Interfaces.TableColumnUpdateData
     langs:
       - typeScript
     type: interface
-    package: excel
+    package: excel!
     children:
-      - excel.Excel.Interfaces.TableColumnUpdateData.name
-      - excel.Excel.Interfaces.TableColumnUpdateData.values
-  - uid: excel.Excel.Interfaces.TableColumnUpdateData.name
+      - 'excel!Excel.Interfaces.TableColumnUpdateData#name:member'
+      - 'excel!Excel.Interfaces.TableColumnUpdateData#values:member'
+  - uid: 'excel!Excel.Interfaces.TableColumnUpdateData#name:member'
     summary: |-
-      <span data-ttu-id="6e0e4-104">表示表列的名称。</span><span class="sxs-lookup"><span data-stu-id="6e0e4-104">Represents the name of the table column.</span></span>
+      <span data-ttu-id="782de-104">表示表列的名称。</span><span class="sxs-lookup"><span data-stu-id="782de-104">Represents the name of the table column.</span></span>
 
-      <span data-ttu-id="6e0e4-105">\[[API 集: ExcelApi 1.1 用于获取名称; 1.4 用于设置名称。](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)</span><span class="sxs-lookup"><span data-stu-id="6e0e4-105">\[ [API set: ExcelApi 1.1 for getting the name; 1.4 for setting it.](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)</span></span> <span data-ttu-id="6e0e4-106">\]</span><span class="sxs-lookup"><span data-stu-id="6e0e4-106"></span></span>
+      <span data-ttu-id="782de-105">\[[API 集： ExcelApi 1.1 用于获取名称; 1.4 用于设置名称。](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)</span><span class="sxs-lookup"><span data-stu-id="782de-105">\[ [API set: ExcelApi 1.1 for getting the name; 1.4 for setting it.](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)</span></span> <span data-ttu-id="782de-106">\]</span><span class="sxs-lookup"><span data-stu-id="782de-106"></span></span>
     name: name
     fullName: name
     langs:
@@ -26,11 +26,11 @@ items:
       return:
         type:
           - string
-  - uid: excel.Excel.Interfaces.TableColumnUpdateData.values
+  - uid: 'excel!Excel.Interfaces.TableColumnUpdateData#values:member'
     summary: |-
-      <span data-ttu-id="6e0e4-107">表示指定区域的原始值。</span><span class="sxs-lookup"><span data-stu-id="6e0e4-107">Represents the raw values of the specified range.</span></span> <span data-ttu-id="6e0e4-108">返回的数据可能是字符串、数字，也可能是布尔值。</span><span class="sxs-lookup"><span data-stu-id="6e0e4-108">The data returned could be of type string, number, or a boolean.</span></span> <span data-ttu-id="6e0e4-109">包含错误的单元格将返回错误字符串。</span><span class="sxs-lookup"><span data-stu-id="6e0e4-109">Cells that contain an error will return the error string.</span></span>
+      <span data-ttu-id="782de-107">表示指定区域的原始值。</span><span class="sxs-lookup"><span data-stu-id="782de-107">Represents the raw values of the specified range.</span></span> <span data-ttu-id="782de-108">返回的数据可能是字符串、数字，也可能是布尔值。</span><span class="sxs-lookup"><span data-stu-id="782de-108">The data returned could be of type string, number, or a boolean.</span></span> <span data-ttu-id="782de-109">包含错误的单元格将返回错误字符串。</span><span class="sxs-lookup"><span data-stu-id="782de-109">Cells that contain an error will return the error string.</span></span>
 
-      <span data-ttu-id="6e0e4-110">\[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6e0e4-110">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="782de-110">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="782de-110">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: values
     fullName: values
     langs:
