--- a/docs/docs-ref-autogen/excel_1_5/excel/excel.interfaces.conditionaldatabarnegativeformatupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_5/excel/excel.interfaces.conditionaldatabarnegativeformatupdatedata.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: excel.Excel.Interfaces.ConditionalDataBarNegativeFormatUpdateData
-    summary: '<span data-ttu-id="8f8b9-101">一个用于更新 ConditionalDataBarNegativeFormat 对象上的数据的接口, 可用于 "conditionalDataBarNegativeFormat (</span><span class="sxs-lookup"><span data-stu-id="8f8b9-101">An interface for updating data on the ConditionalDataBarNegativeFormat object, for use in "conditionalDataBarNegativeFormat.set(</span></span><!-- --><span data-ttu-id="8f8b9-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="8f8b9-102"></span></span><!-- --><span data-ttu-id="8f8b9-103">)".</span><span class="sxs-lookup"><span data-stu-id="8f8b9-103"></span></span>'
+  - uid: 'excel!Excel.Interfaces.ConditionalDataBarNegativeFormatUpdateData:interface'
+    summary: '<span data-ttu-id="74c68-101">一个用于更新 ConditionalDataBarNegativeFormat 对象上的数据的接口，可用于 "conditionalDataBarNegativeFormat （</span><span class="sxs-lookup"><span data-stu-id="74c68-101">An interface for updating data on the ConditionalDataBarNegativeFormat object, for use in "conditionalDataBarNegativeFormat.set(</span></span><!-- --><span data-ttu-id="74c68-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="74c68-102"></span></span><!-- --><span data-ttu-id="74c68-103">)".</span><span class="sxs-lookup"><span data-stu-id="74c68-103"></span></span>'
     name: Excel.Interfaces.ConditionalDataBarNegativeFormatUpdateData
     fullName: Excel.Interfaces.ConditionalDataBarNegativeFormatUpdateData
     langs:
       - typeScript
     type: interface
-    package: excel
+    package: excel!
