--- a/docs/docs-ref-autogen/excel_1_5/excel/excel.interfaces.datapivothierarchyupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_5/excel/excel.interfaces.datapivothierarchyupdatedata.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: excel.Excel.Interfaces.DataPivotHierarchyUpdateData
-    summary: '<span data-ttu-id="37f0c-101">一个用于更新 DataPivotHierarchy 对象上的数据的接口, 可用于 "dataPivotHierarchy (</span><span class="sxs-lookup"><span data-stu-id="37f0c-101">An interface for updating data on the DataPivotHierarchy object, for use in "dataPivotHierarchy.set(</span></span><!-- --><span data-ttu-id="37f0c-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="37f0c-102"></span></span><!-- --><span data-ttu-id="37f0c-103">)".</span><span class="sxs-lookup"><span data-stu-id="37f0c-103"></span></span>'
+  - uid: 'excel!Excel.Interfaces.DataPivotHierarchyUpdateData:interface'
+    summary: '<span data-ttu-id="e58ab-101">一个用于更新 DataPivotHierarchy 对象上的数据的接口，可用于 "dataPivotHierarchy （</span><span class="sxs-lookup"><span data-stu-id="e58ab-101">An interface for updating data on the DataPivotHierarchy object, for use in "dataPivotHierarchy.set(</span></span><!-- --><span data-ttu-id="e58ab-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="e58ab-102"></span></span><!-- --><span data-ttu-id="e58ab-103">)".</span><span class="sxs-lookup"><span data-stu-id="e58ab-103"></span></span>'
     name: Excel.Interfaces.DataPivotHierarchyUpdateData
     fullName: Excel.Interfaces.DataPivotHierarchyUpdateData
     langs:
       - typeScript
     type: interface
-    package: excel
+    package: excel!
