--- a/docs/docs-ref-autogen/excel_1_5/excel/excel.interfaces.nameditemloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_5/excel/excel.interfaces.nameditemloadoptions.yml
@@ -1,27 +1,27 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: excel.Excel.Interfaces.NamedItemLoadOptions
+  - uid: 'excel!Excel.Interfaces.NamedItemLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="8b20e-101">表示单元格区域或值的定义名称。</span><span class="sxs-lookup"><span data-stu-id="8b20e-101">Represents a defined name for a range of cells or value.</span></span> <span data-ttu-id="8b20e-102">名称可以是命名为对象的基元 (如下面的类型中所示)、range 对象或对区域的引用。</span><span class="sxs-lookup"><span data-stu-id="8b20e-102">Names can be primitive named objects (as seen in the type below), range object, or a reference to a range.</span></span> <span data-ttu-id="8b20e-103">此对象可用于获取与名称相关的 range 对象。</span><span class="sxs-lookup"><span data-stu-id="8b20e-103">This object can be used to obtain range object associated with names.</span></span>
+      <span data-ttu-id="74264-101">表示单元格区域或值的定义名称。</span><span class="sxs-lookup"><span data-stu-id="74264-101">Represents a defined name for a range of cells or value.</span></span> <span data-ttu-id="74264-102">名称可以是命名为对象的基元（如下面的类型中所示）、range 对象或对区域的引用。</span><span class="sxs-lookup"><span data-stu-id="74264-102">Names can be primitive named objects (as seen in the type below), range object, or a reference to a range.</span></span> <span data-ttu-id="74264-103">此对象可用于获取与名称相关的 range 对象。</span><span class="sxs-lookup"><span data-stu-id="74264-103">This object can be used to obtain range object associated with names.</span></span>
 
-      <span data-ttu-id="8b20e-104">\[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8b20e-104">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="74264-104">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="74264-104">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: Excel.Interfaces.NamedItemLoadOptions
     fullName: Excel.Interfaces.NamedItemLoadOptions
     langs:
       - typeScript
     type: interface
-    package: excel
+    package: excel!
     children:
-      - excel.Excel.Interfaces.NamedItemLoadOptions.$all
-      - excel.Excel.Interfaces.NamedItemLoadOptions.comment
-      - excel.Excel.Interfaces.NamedItemLoadOptions.name
-      - excel.Excel.Interfaces.NamedItemLoadOptions.scope
-      - excel.Excel.Interfaces.NamedItemLoadOptions.type
-      - excel.Excel.Interfaces.NamedItemLoadOptions.value
-      - excel.Excel.Interfaces.NamedItemLoadOptions.visible
-      - excel.Excel.Interfaces.NamedItemLoadOptions.worksheet
-      - excel.Excel.Interfaces.NamedItemLoadOptions.worksheetOrNullObject
-  - uid: excel.Excel.Interfaces.NamedItemLoadOptions.$all
+      - 'excel!Excel.Interfaces.NamedItemLoadOptions#$all:member'
+      - 'excel!Excel.Interfaces.NamedItemLoadOptions#comment:member'
+      - 'excel!Excel.Interfaces.NamedItemLoadOptions#name:member'
+      - 'excel!Excel.Interfaces.NamedItemLoadOptions#scope:member'
+      - 'excel!Excel.Interfaces.NamedItemLoadOptions#type:member'
+      - 'excel!Excel.Interfaces.NamedItemLoadOptions#value:member'
+      - 'excel!Excel.Interfaces.NamedItemLoadOptions#visible:member'
+      - 'excel!Excel.Interfaces.NamedItemLoadOptions#worksheet:member'
+      - 'excel!Excel.Interfaces.NamedItemLoadOptions#worksheetOrNullObject:member'
+  - uid: 'excel!Excel.Interfaces.NamedItemLoadOptions#$all:member'
     name: $all
     fullName: $all
     langs:
@@ -32,11 +32,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.NamedItemLoadOptions.comment
+  - uid: 'excel!Excel.Interfaces.NamedItemLoadOptions#comment:member'
     summary: |-
-      <span data-ttu-id="8b20e-105">表示与此名称相关联的注释。</span><span class="sxs-lookup"><span data-stu-id="8b20e-105">Represents the comment associated with this name.</span></span>
+      <span data-ttu-id="74264-105">表示与此名称相关联的注释。</span><span class="sxs-lookup"><span data-stu-id="74264-105">Represents the comment associated with this name.</span></span>
 
-      <span data-ttu-id="8b20e-106">\[[API 集: ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8b20e-106">\[ [API set: ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="74264-106">\[[API 集： ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="74264-106">\[ [API set: ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: comment
     fullName: comment
     langs:
@@ -47,11 +47,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.NamedItemLoadOptions.name
+  - uid: 'excel!Excel.Interfaces.NamedItemLoadOptions#name:member'
     summary: |-
-      <span data-ttu-id="8b20e-107">对象的名称。</span><span class="sxs-lookup"><span data-stu-id="8b20e-107">The name of the object.</span></span> <span data-ttu-id="8b20e-108">只读。</span><span class="sxs-lookup"><span data-stu-id="8b20e-108">Read-only.</span></span>
+      <span data-ttu-id="74264-107">对象的名称。</span><span class="sxs-lookup"><span data-stu-id="74264-107">The name of the object.</span></span> <span data-ttu-id="74264-108">只读。</span><span class="sxs-lookup"><span data-stu-id="74264-108">Read-only.</span></span>
 
-      <span data-ttu-id="8b20e-109">\[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8b20e-109">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="74264-109">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="74264-109">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: name
     fullName: name
     langs:
@@ -62,11 +62,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.NamedItemLoadOptions.scope
+  - uid: 'excel!Excel.Interfaces.NamedItemLoadOptions#scope:member'
     summary: |-
-      <span data-ttu-id="8b20e-110">指明是否将 name 限定到工作簿或特定工作表。</span><span class="sxs-lookup"><span data-stu-id="8b20e-110">Indicates whether the name is scoped to the workbook or to a specific worksheet.</span></span> <span data-ttu-id="8b20e-111">可能的值为: 工作表、工作簿。</span><span class="sxs-lookup"><span data-stu-id="8b20e-111">Possible values are: Worksheet, Workbook.</span></span> <span data-ttu-id="8b20e-112">只读。</span><span class="sxs-lookup"><span data-stu-id="8b20e-112">Read-only.</span></span>
+      <span data-ttu-id="74264-110">指明是否将 name 限定到工作簿或特定工作表。</span><span class="sxs-lookup"><span data-stu-id="74264-110">Indicates whether the name is scoped to the workbook or to a specific worksheet.</span></span> <span data-ttu-id="74264-111">可能的值为：工作表、工作簿。</span><span class="sxs-lookup"><span data-stu-id="74264-111">Possible values are: Worksheet, Workbook.</span></span> <span data-ttu-id="74264-112">只读。</span><span class="sxs-lookup"><span data-stu-id="74264-112">Read-only.</span></span>
 
-      <span data-ttu-id="8b20e-113">\[[API 集: ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8b20e-113">\[ [API set: ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="74264-113">\[[API 集： ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="74264-113">\[ [API set: ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: scope
     fullName: scope
     langs:
@@ -77,11 +77,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.NamedItemLoadOptions.type
+  - uid: 'excel!Excel.Interfaces.NamedItemLoadOptions#type:member'
     summary: |-
-      <span data-ttu-id="8b20e-114">指明 name 公式返回的值的类型。</span><span class="sxs-lookup"><span data-stu-id="8b20e-114">Indicates the type of the value returned by the name's formula.</span></span> <span data-ttu-id="8b20e-115">有关详细信息, 请参阅 NamedItemType。</span><span class="sxs-lookup"><span data-stu-id="8b20e-115">See Excel.NamedItemType for details.</span></span> <span data-ttu-id="8b20e-116">只读。</span><span class="sxs-lookup"><span data-stu-id="8b20e-116">Read-only.</span></span>
+      <span data-ttu-id="74264-114">指明 name 公式返回的值的类型。</span><span class="sxs-lookup"><span data-stu-id="74264-114">Indicates the type of the value returned by the name's formula.</span></span> <span data-ttu-id="74264-115">有关详细信息，请参阅 NamedItemType。</span><span class="sxs-lookup"><span data-stu-id="74264-115">See Excel.NamedItemType for details.</span></span> <span data-ttu-id="74264-116">只读。</span><span class="sxs-lookup"><span data-stu-id="74264-116">Read-only.</span></span>
 
-      <span data-ttu-id="8b20e-117">\[[API 集: 字符串、整型、双精度、布尔值、范围、错误的 ExcelApi 1.1、数组的 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8b20e-117">\[ [API set: ExcelApi 1.1 for String,Integer,Double,Boolean,Range,Error; 1.7 for Array](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="74264-117">\[[API 集：字符串、整型、双精度、布尔值、范围、错误的 ExcelApi 1.1、数组的 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="74264-117">\[ [API set: ExcelApi 1.1 for String,Integer,Double,Boolean,Range,Error; 1.7 for Array](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: type
     fullName: type
     langs:
@@ -92,11 +92,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.NamedItemLoadOptions.value
+  - uid: 'excel!Excel.Interfaces.NamedItemLoadOptions#value:member'
     summary: |-
-      <span data-ttu-id="8b20e-118">表示 name 公式计算出的值。</span><span class="sxs-lookup"><span data-stu-id="8b20e-118">Represents the value computed by the name's formula.</span></span> <span data-ttu-id="8b20e-119">对于已命名区域，将返回区域地址。</span><span class="sxs-lookup"><span data-stu-id="8b20e-119">For a named range, will return the range address.</span></span> <span data-ttu-id="8b20e-120">只读。</span><span class="sxs-lookup"><span data-stu-id="8b20e-120">Read-only.</span></span>
+      <span data-ttu-id="74264-118">表示 name 公式计算出的值。</span><span class="sxs-lookup"><span data-stu-id="74264-118">Represents the value computed by the name's formula.</span></span> <span data-ttu-id="74264-119">对于已命名区域，将返回区域地址。</span><span class="sxs-lookup"><span data-stu-id="74264-119">For a named range, will return the range address.</span></span> <span data-ttu-id="74264-120">只读。</span><span class="sxs-lookup"><span data-stu-id="74264-120">Read-only.</span></span>
 
-      <span data-ttu-id="8b20e-121">\[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8b20e-121">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="74264-121">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="74264-121">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: value
     fullName: value
     langs:
@@ -107,11 +107,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.NamedItemLoadOptions.visible
+  - uid: 'excel!Excel.Interfaces.NamedItemLoadOptions#visible:member'
     summary: |-
-      <span data-ttu-id="8b20e-122">指定对象是否可见。</span><span class="sxs-lookup"><span data-stu-id="8b20e-122">Specifies whether the object is visible or not.</span></span>
+      <span data-ttu-id="74264-122">指定对象是否可见。</span><span class="sxs-lookup"><span data-stu-id="74264-122">Specifies whether the object is visible or not.</span></span>
 
-      <span data-ttu-id="8b20e-123">\[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8b20e-123">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="74264-123">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="74264-123">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: visible
     fullName: visible
     langs:
@@ -122,11 +122,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.NamedItemLoadOptions.worksheet
+  - uid: 'excel!Excel.Interfaces.NamedItemLoadOptions#worksheet:member'
     summary: |-
-      <span data-ttu-id="8b20e-124">返回已命名项限定到的工作表。</span><span class="sxs-lookup"><span data-stu-id="8b20e-124">Returns the worksheet on which the named item is scoped to.</span></span> <span data-ttu-id="8b20e-125">如果项目的作用域改为工作簿, 则会引发错误。</span><span class="sxs-lookup"><span data-stu-id="8b20e-125">Throws an error if the item is scoped to the workbook instead.</span></span>
+      <span data-ttu-id="74264-124">返回已命名项限定到的工作表。</span><span class="sxs-lookup"><span data-stu-id="74264-124">Returns the worksheet on which the named item is scoped to.</span></span> <span data-ttu-id="74264-125">如果项目的作用域改为工作簿，则会引发错误。</span><span class="sxs-lookup"><span data-stu-id="74264-125">Throws an error if the item is scoped to the workbook instead.</span></span>
 
-      <span data-ttu-id="8b20e-126">\[[API 集: ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8b20e-126">\[ [API set: ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="74264-126">\[[API 集： ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="74264-126">\[ [API set: ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: worksheet
     fullName: worksheet
     langs:
@@ -136,12 +136,12 @@ items:
       content: 'worksheet?: Excel.Interfaces.WorksheetLoadOptions;'
       return:
         type:
-          - excel.Excel.Interfaces.WorksheetLoadOptions
-  - uid: excel.Excel.Interfaces.NamedItemLoadOptions.worksheetOrNullObject
+          - 'excel!Excel.Interfaces.WorksheetLoadOptions:interface'
+  - uid: 'excel!Excel.Interfaces.NamedItemLoadOptions#worksheetOrNullObject:member'
     summary: |-
-      <span data-ttu-id="8b20e-127">返回已命名项限定到的工作表。</span><span class="sxs-lookup"><span data-stu-id="8b20e-127">Returns the worksheet on which the named item is scoped to.</span></span> <span data-ttu-id="8b20e-128">如果项改为限定到工作簿，将返回 NULL 对象。</span><span class="sxs-lookup"><span data-stu-id="8b20e-128">Returns a null object if the item is scoped to the workbook instead.</span></span>
+      <span data-ttu-id="74264-127">返回已命名项限定到的工作表。</span><span class="sxs-lookup"><span data-stu-id="74264-127">Returns the worksheet on which the named item is scoped to.</span></span> <span data-ttu-id="74264-128">如果项改为限定到工作簿，将返回 NULL 对象。</span><span class="sxs-lookup"><span data-stu-id="74264-128">Returns a null object if the item is scoped to the workbook instead.</span></span>
 
-      <span data-ttu-id="8b20e-129">\[[API 集: ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8b20e-129">\[ [API set: ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="74264-129">\[[API 集： ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="74264-129">\[ [API set: ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: worksheetOrNullObject
     fullName: worksheetOrNullObject
     langs:
@@ -151,4 +151,7 @@ items:
       content: 'worksheetOrNullObject?: Excel.Interfaces.WorksheetLoadOptions;'
       return:
         type:
-          - excel.Excel.Interfaces.WorksheetLoadOptions
+          - 'excel!Excel.Interfaces.WorksheetLoadOptions:interface'
+references:
+  - uid: 'excel!Excel.Interfaces.WorksheetLoadOptions:interface'
+    name: Excel.Interfaces.WorksheetLoadOptions
