--- a/docs/docs-ref-autogen/excel_1_6/excel/excel.interfaces.chartlegendloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_6/excel/excel.interfaces.chartlegendloadoptions.yml
@@ -1,23 +1,23 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: excel.Excel.Interfaces.ChartLegendLoadOptions
+  - uid: 'excel!Excel.Interfaces.ChartLegendLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="ffec9-101">表示图表中的图例。</span><span class="sxs-lookup"><span data-stu-id="ffec9-101">Represents the legend in a chart.</span></span>
+      <span data-ttu-id="f31f4-101">表示图表中的图例。</span><span class="sxs-lookup"><span data-stu-id="f31f4-101">Represents the legend in a chart.</span></span>
 
-      <span data-ttu-id="ffec9-102">\[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ffec9-102">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="f31f4-102">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f31f4-102">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: Excel.Interfaces.ChartLegendLoadOptions
     fullName: Excel.Interfaces.ChartLegendLoadOptions
     langs:
       - typeScript
     type: interface
-    package: excel
+    package: excel!
     children:
-      - excel.Excel.Interfaces.ChartLegendLoadOptions.$all
-      - excel.Excel.Interfaces.ChartLegendLoadOptions.format
-      - excel.Excel.Interfaces.ChartLegendLoadOptions.overlay
-      - excel.Excel.Interfaces.ChartLegendLoadOptions.position
-      - excel.Excel.Interfaces.ChartLegendLoadOptions.visible
-  - uid: excel.Excel.Interfaces.ChartLegendLoadOptions.$all
+      - 'excel!Excel.Interfaces.ChartLegendLoadOptions#$all:member'
+      - 'excel!Excel.Interfaces.ChartLegendLoadOptions#format:member'
+      - 'excel!Excel.Interfaces.ChartLegendLoadOptions#overlay:member'
+      - 'excel!Excel.Interfaces.ChartLegendLoadOptions#position:member'
+      - 'excel!Excel.Interfaces.ChartLegendLoadOptions#visible:member'
+  - uid: 'excel!Excel.Interfaces.ChartLegendLoadOptions#$all:member'
     name: $all
     fullName: $all
     langs:
@@ -28,11 +28,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.ChartLegendLoadOptions.format
+  - uid: 'excel!Excel.Interfaces.ChartLegendLoadOptions#format:member'
     summary: |-
-      <span data-ttu-id="ffec9-103">表示图表图例的格式，包括填充和字体格式。</span><span class="sxs-lookup"><span data-stu-id="ffec9-103">Represents the formatting of a chart legend, which includes fill and font formatting.</span></span>
+      <span data-ttu-id="f31f4-103">表示图表图例的格式，包括填充和字体格式。</span><span class="sxs-lookup"><span data-stu-id="f31f4-103">Represents the formatting of a chart legend, which includes fill and font formatting.</span></span>
 
-      <span data-ttu-id="ffec9-104">\[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ffec9-104">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="f31f4-104">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f31f4-104">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: format
     fullName: format
     langs:
@@ -42,12 +42,12 @@ items:
       content: 'format?: Excel.Interfaces.ChartLegendFormatLoadOptions;'
       return:
         type:
-          - excel.Excel.Interfaces.ChartLegendFormatLoadOptions
-  - uid: excel.Excel.Interfaces.ChartLegendLoadOptions.overlay
+          - 'excel!Excel.Interfaces.ChartLegendFormatLoadOptions:interface'
+  - uid: 'excel!Excel.Interfaces.ChartLegendLoadOptions#overlay:member'
     summary: |-
-      <span data-ttu-id="ffec9-105">表示图表图例是否应该与图表的主体重叠的布尔值。</span><span class="sxs-lookup"><span data-stu-id="ffec9-105">Boolean value for whether the chart legend should overlap with the main body of the chart.</span></span>
+      <span data-ttu-id="f31f4-105">表示图表图例是否应该与图表的主体重叠的布尔值。</span><span class="sxs-lookup"><span data-stu-id="f31f4-105">Boolean value for whether the chart legend should overlap with the main body of the chart.</span></span>
 
-      <span data-ttu-id="ffec9-106">\[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ffec9-106">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="f31f4-106">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f31f4-106">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: overlay
     fullName: overlay
     langs:
@@ -58,11 +58,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.ChartLegendLoadOptions.position
+  - uid: 'excel!Excel.Interfaces.ChartLegendLoadOptions#position:member'
     summary: |-
-      <span data-ttu-id="ffec9-107">表示图例在图表上的位置。</span><span class="sxs-lookup"><span data-stu-id="ffec9-107">Represents the position of the legend on the chart.</span></span> <span data-ttu-id="ffec9-108">有关详细信息, 请参阅 ChartLegendPosition。</span><span class="sxs-lookup"><span data-stu-id="ffec9-108">See Excel.ChartLegendPosition for details.</span></span>
+      <span data-ttu-id="f31f4-107">表示图例在图表上的位置。</span><span class="sxs-lookup"><span data-stu-id="f31f4-107">Represents the position of the legend on the chart.</span></span> <span data-ttu-id="f31f4-108">有关详细信息，请参阅 ChartLegendPosition。</span><span class="sxs-lookup"><span data-stu-id="f31f4-108">See Excel.ChartLegendPosition for details.</span></span>
 
-      <span data-ttu-id="ffec9-109">\[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ffec9-109">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="f31f4-109">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f31f4-109">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: position
     fullName: position
     langs:
@@ -73,11 +73,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.ChartLegendLoadOptions.visible
+  - uid: 'excel!Excel.Interfaces.ChartLegendLoadOptions#visible:member'
     summary: |-
-      <span data-ttu-id="ffec9-110">表示 ChartLegend 对象是否可见的布尔值。</span><span class="sxs-lookup"><span data-stu-id="ffec9-110">A boolean value the represents the visibility of a ChartLegend object.</span></span>
+      <span data-ttu-id="f31f4-110">表示 ChartLegend 对象是否可见的布尔值。</span><span class="sxs-lookup"><span data-stu-id="f31f4-110">A boolean value the represents the visibility of a ChartLegend object.</span></span>
 
-      <span data-ttu-id="ffec9-111">\[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ffec9-111">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="f31f4-111">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f31f4-111">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: visible
     fullName: visible
     langs:
@@ -88,3 +88,6 @@ items:
       return:
         type:
           - boolean
+references:
+  - uid: 'excel!Excel.Interfaces.ChartLegendFormatLoadOptions:interface'
+    name: Excel.Interfaces.ChartLegendFormatLoadOptions
