--- a/docs/docs-ref-autogen/excel_1_6/excel/excel.interfaces.chartpointdata.yml
+++ b/docs/docs-ref-autogen/excel_1_6/excel/excel.interfaces.chartpointdata.yml
@@ -1,21 +1,21 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: excel.Excel.Interfaces.ChartPointData
-    summary: <span data-ttu-id="2f1d4-101">描述通过调用 "chartPoint ()" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="2f1d4-101">An interface describing the data returned by calling "chartPoint.toJSON()".</span></span>
+  - uid: 'excel!Excel.Interfaces.ChartPointData:interface'
+    summary: <span data-ttu-id="c2e68-101">描述通过调用 "chartPoint （）" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="c2e68-101">An interface describing the data returned by calling "chartPoint.toJSON()".</span></span>
     name: Excel.Interfaces.ChartPointData
     fullName: Excel.Interfaces.ChartPointData
     langs:
       - typeScript
     type: interface
-    package: excel
+    package: excel!
     children:
-      - excel.Excel.Interfaces.ChartPointData.format
-      - excel.Excel.Interfaces.ChartPointData.value
-  - uid: excel.Excel.Interfaces.ChartPointData.format
+      - 'excel!Excel.Interfaces.ChartPointData#format:member'
+      - 'excel!Excel.Interfaces.ChartPointData#value:member'
+  - uid: 'excel!Excel.Interfaces.ChartPointData#format:member'
     summary: |-
-      <span data-ttu-id="2f1d4-102">封装图表点的格式属性。</span><span class="sxs-lookup"><span data-stu-id="2f1d4-102">Encapsulates the format properties chart point.</span></span> <span data-ttu-id="2f1d4-103">只读。</span><span class="sxs-lookup"><span data-stu-id="2f1d4-103">Read-only.</span></span>
+      <span data-ttu-id="c2e68-102">封装图表点的格式属性。</span><span class="sxs-lookup"><span data-stu-id="c2e68-102">Encapsulates the format properties chart point.</span></span> <span data-ttu-id="c2e68-103">只读。</span><span class="sxs-lookup"><span data-stu-id="c2e68-103">Read-only.</span></span>
 
-      <span data-ttu-id="2f1d4-104">\[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2f1d4-104">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="c2e68-104">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c2e68-104">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: format
     fullName: format
     langs:
@@ -25,12 +25,12 @@ items:
       content: 'format?: Excel.Interfaces.ChartPointFormatData;'
       return:
         type:
-          - excel.Excel.Interfaces.ChartPointFormatData
-  - uid: excel.Excel.Interfaces.ChartPointData.value
+          - 'excel!Excel.Interfaces.ChartPointFormatData:interface'
+  - uid: 'excel!Excel.Interfaces.ChartPointData#value:member'
     summary: |-
-      <span data-ttu-id="2f1d4-105">返回图表点的值。</span><span class="sxs-lookup"><span data-stu-id="2f1d4-105">Returns the value of a chart point.</span></span> <span data-ttu-id="2f1d4-106">只读。</span><span class="sxs-lookup"><span data-stu-id="2f1d4-106">Read-only.</span></span>
+      <span data-ttu-id="c2e68-105">返回图表点的值。</span><span class="sxs-lookup"><span data-stu-id="c2e68-105">Returns the value of a chart point.</span></span> <span data-ttu-id="c2e68-106">只读。</span><span class="sxs-lookup"><span data-stu-id="c2e68-106">Read-only.</span></span>
 
-      <span data-ttu-id="2f1d4-107">\[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2f1d4-107">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="c2e68-107">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c2e68-107">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: value
     fullName: value
     langs:
@@ -41,3 +41,6 @@ items:
       return:
         type:
           - any
+references:
+  - uid: 'excel!Excel.Interfaces.ChartPointFormatData:interface'
+    name: Excel.Interfaces.ChartPointFormatData
