--- a/docs/docs-ref-autogen/excel_1_6/excel/excel.interfaces.colorscaleconditionalformatupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_6/excel/excel.interfaces.colorscaleconditionalformatupdatedata.yml
@@ -1,20 +1,20 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: excel.Excel.Interfaces.ColorScaleConditionalFormatUpdateData
-    summary: '<span data-ttu-id="21bd8-101">一个用于更新 ColorScaleConditionalFormat 对象上的数据的接口, 可用于 "colorScaleConditionalFormat (</span><span class="sxs-lookup"><span data-stu-id="21bd8-101">An interface for updating data on the ColorScaleConditionalFormat object, for use in "colorScaleConditionalFormat.set(</span></span><!-- --><span data-ttu-id="21bd8-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="21bd8-102"></span></span><!-- --><span data-ttu-id="21bd8-103">)".</span><span class="sxs-lookup"><span data-stu-id="21bd8-103"></span></span>'
+  - uid: 'excel!Excel.Interfaces.ColorScaleConditionalFormatUpdateData:interface'
+    summary: '<span data-ttu-id="32967-101">一个用于更新 ColorScaleConditionalFormat 对象上的数据的接口，可用于 "colorScaleConditionalFormat （</span><span class="sxs-lookup"><span data-stu-id="32967-101">An interface for updating data on the ColorScaleConditionalFormat object, for use in "colorScaleConditionalFormat.set(</span></span><!-- --><span data-ttu-id="32967-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="32967-102"></span></span><!-- --><span data-ttu-id="32967-103">)".</span><span class="sxs-lookup"><span data-stu-id="32967-103"></span></span>'
     name: Excel.Interfaces.ColorScaleConditionalFormatUpdateData
     fullName: Excel.Interfaces.ColorScaleConditionalFormatUpdateData
     langs:
       - typeScript
     type: interface
-    package: excel
+    package: excel!
     children:
-      - excel.Excel.Interfaces.ColorScaleConditionalFormatUpdateData.criteria
-  - uid: excel.Excel.Interfaces.ColorScaleConditionalFormatUpdateData.criteria
+      - 'excel!Excel.Interfaces.ColorScaleConditionalFormatUpdateData#criteria:member'
+  - uid: 'excel!Excel.Interfaces.ColorScaleConditionalFormatUpdateData#criteria:member'
     summary: |-
-      <span data-ttu-id="21bd8-104">色阶的条件。</span><span class="sxs-lookup"><span data-stu-id="21bd8-104">The criteria of the color scale.</span></span> <span data-ttu-id="21bd8-105">使用两个点的色阶时, 中点是可选的。</span><span class="sxs-lookup"><span data-stu-id="21bd8-105">Midpoint is optional when using a two point color scale.</span></span>
+      <span data-ttu-id="32967-104">色阶的条件。</span><span class="sxs-lookup"><span data-stu-id="32967-104">The criteria of the color scale.</span></span> <span data-ttu-id="32967-105">使用两个点的色阶时，中点是可选的。</span><span class="sxs-lookup"><span data-stu-id="32967-105">Midpoint is optional when using a two point color scale.</span></span>
 
-      <span data-ttu-id="21bd8-106">\[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="21bd8-106">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="32967-106">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="32967-106">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: criteria
     fullName: criteria
     langs:
@@ -24,4 +24,7 @@ items:
       content: 'criteria?: Excel.ConditionalColorScaleCriteria;'
       return:
         type:
-          - excel.Excel.ConditionalColorScaleCriteria
+          - 'excel!Excel.ConditionalColorScaleCriteria:interface'
+references:
+  - uid: 'excel!Excel.ConditionalColorScaleCriteria:interface'
+    name: Excel.ConditionalColorScaleCriteria
