--- a/docs/docs-ref-autogen/excel_1_6/excel/excel.interfaces.imagedata.yml
+++ b/docs/docs-ref-autogen/excel_1_6/excel/excel.interfaces.imagedata.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: excel.Excel.Interfaces.ImageData
-    summary: <span data-ttu-id="6c522-101">描述通过调用 "toJSON ()" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="6c522-101">An interface describing the data returned by calling "image.toJSON()".</span></span>
+  - uid: 'excel!Excel.Interfaces.ImageData:interface'
+    summary: <span data-ttu-id="8921b-101">描述通过调用 "toJSON （）" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="8921b-101">An interface describing the data returned by calling "image.toJSON()".</span></span>
     name: Excel.Interfaces.ImageData
     fullName: Excel.Interfaces.ImageData
     langs:
       - typeScript
     type: interface
-    package: excel
+    package: excel!
