--- a/docs/docs-ref-autogen/excel_1_6/excel/excel.interfaces.rangebordercollectionloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_6/excel/excel.interfaces.rangebordercollectionloadoptions.yml
@@ -1,23 +1,23 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: excel.Excel.Interfaces.RangeBorderCollectionLoadOptions
+  - uid: 'excel!Excel.Interfaces.RangeBorderCollectionLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="e7ef1-101">表示构成区域边框的 Border 对象。</span><span class="sxs-lookup"><span data-stu-id="e7ef1-101">Represents the border objects that make up the range border.</span></span>
+      <span data-ttu-id="2e72a-101">表示构成区域边框的 Border 对象。</span><span class="sxs-lookup"><span data-stu-id="2e72a-101">Represents the border objects that make up the range border.</span></span>
 
-      <span data-ttu-id="e7ef1-102">\[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e7ef1-102">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="2e72a-102">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2e72a-102">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: Excel.Interfaces.RangeBorderCollectionLoadOptions
     fullName: Excel.Interfaces.RangeBorderCollectionLoadOptions
     langs:
       - typeScript
     type: interface
-    package: excel
+    package: excel!
     children:
-      - excel.Excel.Interfaces.RangeBorderCollectionLoadOptions.$all
-      - excel.Excel.Interfaces.RangeBorderCollectionLoadOptions.color
-      - excel.Excel.Interfaces.RangeBorderCollectionLoadOptions.sideIndex
-      - excel.Excel.Interfaces.RangeBorderCollectionLoadOptions.style
-      - excel.Excel.Interfaces.RangeBorderCollectionLoadOptions.weight
-  - uid: excel.Excel.Interfaces.RangeBorderCollectionLoadOptions.$all
+      - 'excel!Excel.Interfaces.RangeBorderCollectionLoadOptions#$all:member'
+      - 'excel!Excel.Interfaces.RangeBorderCollectionLoadOptions#color:member'
+      - 'excel!Excel.Interfaces.RangeBorderCollectionLoadOptions#sideIndex:member'
+      - 'excel!Excel.Interfaces.RangeBorderCollectionLoadOptions#style:member'
+      - 'excel!Excel.Interfaces.RangeBorderCollectionLoadOptions#weight:member'
+  - uid: 'excel!Excel.Interfaces.RangeBorderCollectionLoadOptions#$all:member'
     name: $all
     fullName: $all
     langs:
@@ -28,11 +28,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.RangeBorderCollectionLoadOptions.color
+  - uid: 'excel!Excel.Interfaces.RangeBorderCollectionLoadOptions#color:member'
     summary: |-
-      <span data-ttu-id="e7ef1-103">对于集合中的每一项: HTML 颜色代码, 表示边框线的颜色, 格式\#RRGGBB (例如 "FFA500") 或命名的 HTML 颜色 (例如 "橙色")。</span><span class="sxs-lookup"><span data-stu-id="e7ef1-103">For EACH ITEM in the collection: HTML color code representing the color of the border line, of the form \#RRGGBB (e.g. "FFA500") or as a named HTML color (e.g. "orange").</span></span>
+      <span data-ttu-id="2e72a-103">对于集合中的每一项： HTML 颜色代码，表示边框线的颜色，格式\#RRGGBB （例如 "FFA500"）或命名的 HTML 颜色（例如 "橙色"）。</span><span class="sxs-lookup"><span data-stu-id="2e72a-103">For EACH ITEM in the collection: HTML color code representing the color of the border line, of the form \#RRGGBB (e.g. "FFA500") or as a named HTML color (e.g. "orange").</span></span>
 
-      <span data-ttu-id="e7ef1-104">\[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e7ef1-104">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="2e72a-104">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2e72a-104">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: color
     fullName: color
     langs:
@@ -43,11 +43,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.RangeBorderCollectionLoadOptions.sideIndex
+  - uid: 'excel!Excel.Interfaces.RangeBorderCollectionLoadOptions#sideIndex:member'
     summary: |-
-      <span data-ttu-id="e7ef1-105">对于集合中的每一项: 常量值, 用于指示边框的特定侧。</span><span class="sxs-lookup"><span data-stu-id="e7ef1-105">For EACH ITEM in the collection: Constant value that indicates the specific side of the border.</span></span> <span data-ttu-id="e7ef1-106">有关详细信息, 请参阅 BorderIndex。</span><span class="sxs-lookup"><span data-stu-id="e7ef1-106">See Excel.BorderIndex for details.</span></span> <span data-ttu-id="e7ef1-107">只读。</span><span class="sxs-lookup"><span data-stu-id="e7ef1-107">Read-only.</span></span>
+      <span data-ttu-id="2e72a-105">对于集合中的每一项：常量值，用于指示边框的特定侧。</span><span class="sxs-lookup"><span data-stu-id="2e72a-105">For EACH ITEM in the collection: Constant value that indicates the specific side of the border.</span></span> <span data-ttu-id="2e72a-106">有关详细信息，请参阅 BorderIndex。</span><span class="sxs-lookup"><span data-stu-id="2e72a-106">See Excel.BorderIndex for details.</span></span> <span data-ttu-id="2e72a-107">只读。</span><span class="sxs-lookup"><span data-stu-id="2e72a-107">Read-only.</span></span>
 
-      <span data-ttu-id="e7ef1-108">\[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e7ef1-108">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="2e72a-108">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2e72a-108">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: sideIndex
     fullName: sideIndex
     langs:
@@ -58,11 +58,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.RangeBorderCollectionLoadOptions.style
+  - uid: 'excel!Excel.Interfaces.RangeBorderCollectionLoadOptions#style:member'
     summary: |-
-      <span data-ttu-id="e7ef1-109">对于集合中的每个项目: 指定边框线条样式的线条样式的常量之一。</span><span class="sxs-lookup"><span data-stu-id="e7ef1-109">For EACH ITEM in the collection: One of the constants of line style specifying the line style for the border.</span></span> <span data-ttu-id="e7ef1-110">有关详细信息, 请参阅 BorderLineStyle。</span><span class="sxs-lookup"><span data-stu-id="e7ef1-110">See Excel.BorderLineStyle for details.</span></span>
+      <span data-ttu-id="2e72a-109">对于集合中的每个项目：指定边框线条样式的线条样式的常量之一。</span><span class="sxs-lookup"><span data-stu-id="2e72a-109">For EACH ITEM in the collection: One of the constants of line style specifying the line style for the border.</span></span> <span data-ttu-id="2e72a-110">有关详细信息，请参阅 BorderLineStyle。</span><span class="sxs-lookup"><span data-stu-id="2e72a-110">See Excel.BorderLineStyle for details.</span></span>
 
-      <span data-ttu-id="e7ef1-111">\[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e7ef1-111">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="2e72a-111">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2e72a-111">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: style
     fullName: style
     langs:
@@ -73,11 +73,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.RangeBorderCollectionLoadOptions.weight
+  - uid: 'excel!Excel.Interfaces.RangeBorderCollectionLoadOptions#weight:member'
     summary: |-
-      <span data-ttu-id="e7ef1-112">对于集合中的每个项目: 指定某一范围周围的边框的粗细。</span><span class="sxs-lookup"><span data-stu-id="e7ef1-112">For EACH ITEM in the collection: Specifies the weight of the border around a range.</span></span> <span data-ttu-id="e7ef1-113">有关详细信息, 请参阅 BorderWeight。</span><span class="sxs-lookup"><span data-stu-id="e7ef1-113">See Excel.BorderWeight for details.</span></span>
+      <span data-ttu-id="2e72a-112">对于集合中的每个项目：指定某一范围周围的边框的粗细。</span><span class="sxs-lookup"><span data-stu-id="2e72a-112">For EACH ITEM in the collection: Specifies the weight of the border around a range.</span></span> <span data-ttu-id="2e72a-113">有关详细信息，请参阅 BorderWeight。</span><span class="sxs-lookup"><span data-stu-id="2e72a-113">See Excel.BorderWeight for details.</span></span>
 
-      <span data-ttu-id="e7ef1-114">\[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e7ef1-114">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="2e72a-114">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2e72a-114">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: weight
     fullName: weight
     langs:
