--- a/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.rangeareasupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.rangeareasupdatedata.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: excel.Excel.Interfaces.RangeAreasUpdateData
-    summary: '<span data-ttu-id="8ec9e-101">一个用于更新 RangeAreas 对象上的数据的接口, 可用于 "rangeAreas (</span><span class="sxs-lookup"><span data-stu-id="8ec9e-101">An interface for updating data on the RangeAreas object, for use in "rangeAreas.set(</span></span><!-- --><span data-ttu-id="8ec9e-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="8ec9e-102"></span></span><!-- --><span data-ttu-id="8ec9e-103">)".</span><span class="sxs-lookup"><span data-stu-id="8ec9e-103"></span></span>'
+  - uid: 'excel!Excel.Interfaces.RangeAreasUpdateData:interface'
+    summary: '<span data-ttu-id="ac207-101">一个用于更新 RangeAreas 对象上的数据的接口，可用于 "rangeAreas （</span><span class="sxs-lookup"><span data-stu-id="ac207-101">An interface for updating data on the RangeAreas object, for use in "rangeAreas.set(</span></span><!-- --><span data-ttu-id="ac207-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="ac207-102"></span></span><!-- --><span data-ttu-id="ac207-103">)".</span><span class="sxs-lookup"><span data-stu-id="ac207-103"></span></span>'
     name: Excel.Interfaces.RangeAreasUpdateData
     fullName: Excel.Interfaces.RangeAreasUpdateData
     langs:
       - typeScript
     type: interface
-    package: excel
+    package: excel!
