commit bilingual contents

--- a/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.documentpropertiesupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.documentpropertiesupdatedata.yml
@@ -1,28 +1,28 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: excel.Excel.Interfaces.DocumentPropertiesUpdateData
-    summary: '<span data-ttu-id="45321-101">一个用于更新 DocumentProperties 对象上的数据的接口, 可用于 "documentProperties (</span><span class="sxs-lookup"><span data-stu-id="45321-101">An interface for updating data on the DocumentProperties object, for use in "documentProperties.set(</span></span><!-- --><span data-ttu-id="45321-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="45321-102"></span></span><!-- --><span data-ttu-id="45321-103">)".</span><span class="sxs-lookup"><span data-stu-id="45321-103"></span></span>'
+  - uid: 'excel!Excel.Interfaces.DocumentPropertiesUpdateData:interface'
+    summary: '<span data-ttu-id="50ea1-101">一个用于更新 DocumentProperties 对象上的数据的接口，可用于 "documentProperties （</span><span class="sxs-lookup"><span data-stu-id="50ea1-101">An interface for updating data on the DocumentProperties object, for use in "documentProperties.set(</span></span><!-- --><span data-ttu-id="50ea1-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="50ea1-102"></span></span><!-- --><span data-ttu-id="50ea1-103">)".</span><span class="sxs-lookup"><span data-stu-id="50ea1-103"></span></span>'
     name: Excel.Interfaces.DocumentPropertiesUpdateData
     fullName: Excel.Interfaces.DocumentPropertiesUpdateData
     langs:
       - typeScript
     type: interface
-    package: excel
+    package: excel!
     children:
-      - excel.Excel.Interfaces.DocumentPropertiesUpdateData.author
-      - excel.Excel.Interfaces.DocumentPropertiesUpdateData.category
-      - excel.Excel.Interfaces.DocumentPropertiesUpdateData.comments
-      - excel.Excel.Interfaces.DocumentPropertiesUpdateData.company
-      - excel.Excel.Interfaces.DocumentPropertiesUpdateData.keywords
-      - excel.Excel.Interfaces.DocumentPropertiesUpdateData.manager
-      - excel.Excel.Interfaces.DocumentPropertiesUpdateData.revisionNumber
-      - excel.Excel.Interfaces.DocumentPropertiesUpdateData.subject
-      - excel.Excel.Interfaces.DocumentPropertiesUpdateData.title
-  - uid: excel.Excel.Interfaces.DocumentPropertiesUpdateData.author
+      - 'excel!Excel.Interfaces.DocumentPropertiesUpdateData#author:member'
+      - 'excel!Excel.Interfaces.DocumentPropertiesUpdateData#category:member'
+      - 'excel!Excel.Interfaces.DocumentPropertiesUpdateData#comments:member'
+      - 'excel!Excel.Interfaces.DocumentPropertiesUpdateData#company:member'
+      - 'excel!Excel.Interfaces.DocumentPropertiesUpdateData#keywords:member'
+      - 'excel!Excel.Interfaces.DocumentPropertiesUpdateData#manager:member'
+      - 'excel!Excel.Interfaces.DocumentPropertiesUpdateData#revisionNumber:member'
+      - 'excel!Excel.Interfaces.DocumentPropertiesUpdateData#subject:member'
+      - 'excel!Excel.Interfaces.DocumentPropertiesUpdateData#title:member'
+  - uid: 'excel!Excel.Interfaces.DocumentPropertiesUpdateData#author:member'
     summary: |-
-      <span data-ttu-id="45321-104">获取或设置工作簿的作者。</span><span class="sxs-lookup"><span data-stu-id="45321-104">Gets or sets the author of the workbook.</span></span>
+      <span data-ttu-id="50ea1-104">获取或设置工作簿的作者。</span><span class="sxs-lookup"><span data-stu-id="50ea1-104">Gets or sets the author of the workbook.</span></span>
 
-      <span data-ttu-id="45321-105">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="45321-105">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="50ea1-105">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="50ea1-105">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: author
     fullName: author
     langs:
@@ -33,11 +33,11 @@ items:
       return:
         type:
           - string
-  - uid: excel.Excel.Interfaces.DocumentPropertiesUpdateData.category
+  - uid: 'excel!Excel.Interfaces.DocumentPropertiesUpdateData#category:member'
     summary: |-
-      <span data-ttu-id="45321-106">获取或设置工作簿的类别。</span><span class="sxs-lookup"><span data-stu-id="45321-106">Gets or sets the category of the workbook.</span></span>
+      <span data-ttu-id="50ea1-106">获取或设置工作簿的类别。</span><span class="sxs-lookup"><span data-stu-id="50ea1-106">Gets or sets the category of the workbook.</span></span>
 
-      <span data-ttu-id="45321-107">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="45321-107">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="50ea1-107">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="50ea1-107">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: category
     fullName: category
     langs:
@@ -48,11 +48,11 @@ items:
       return:
         type:
           - string
-  - uid: excel.Excel.Interfaces.DocumentPropertiesUpdateData.comments
+  - uid: 'excel!Excel.Interfaces.DocumentPropertiesUpdateData#comments:member'
     summary: |-
-      <span data-ttu-id="45321-108">获取或设置工作簿的注释。</span><span class="sxs-lookup"><span data-stu-id="45321-108">Gets or sets the comments of the workbook.</span></span>
+      <span data-ttu-id="50ea1-108">获取或设置工作簿的注释。</span><span class="sxs-lookup"><span data-stu-id="50ea1-108">Gets or sets the comments of the workbook.</span></span>
 
-      <span data-ttu-id="45321-109">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="45321-109">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="50ea1-109">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="50ea1-109">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: comments
     fullName: comments
     langs:
@@ -63,11 +63,11 @@ items:
       return:
         type:
           - string
-  - uid: excel.Excel.Interfaces.DocumentPropertiesUpdateData.company
+  - uid: 'excel!Excel.Interfaces.DocumentPropertiesUpdateData#company:member'
     summary: |-
-      <span data-ttu-id="45321-110">获取或设置工作簿的公司。</span><span class="sxs-lookup"><span data-stu-id="45321-110">Gets or sets the company of the workbook.</span></span>
+      <span data-ttu-id="50ea1-110">获取或设置工作簿的公司。</span><span class="sxs-lookup"><span data-stu-id="50ea1-110">Gets or sets the company of the workbook.</span></span>
 
-      <span data-ttu-id="45321-111">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="45321-111">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="50ea1-111">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="50ea1-111">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: company
     fullName: company
     langs:
@@ -78,11 +78,11 @@ items:
       return:
         type:
           - string
-  - uid: excel.Excel.Interfaces.DocumentPropertiesUpdateData.keywords
+  - uid: 'excel!Excel.Interfaces.DocumentPropertiesUpdateData#keywords:member'
     summary: |-
-      <span data-ttu-id="45321-112">获取或设置工作簿的关键字。</span><span class="sxs-lookup"><span data-stu-id="45321-112">Gets or sets the keywords of the workbook.</span></span>
+      <span data-ttu-id="50ea1-112">获取或设置工作簿的关键字。</span><span class="sxs-lookup"><span data-stu-id="50ea1-112">Gets or sets the keywords of the workbook.</span></span>
 
-      <span data-ttu-id="45321-113">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="45321-113">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="50ea1-113">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="50ea1-113">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: keywords
     fullName: keywords
     langs:
@@ -93,11 +93,11 @@ items:
       return:
         type:
           - string
-  - uid: excel.Excel.Interfaces.DocumentPropertiesUpdateData.manager
+  - uid: 'excel!Excel.Interfaces.DocumentPropertiesUpdateData#manager:member'
     summary: |-
-      <span data-ttu-id="45321-114">获取或设置工作簿的管理者。</span><span class="sxs-lookup"><span data-stu-id="45321-114">Gets or sets the manager of the workbook.</span></span>
+      <span data-ttu-id="50ea1-114">获取或设置工作簿的管理者。</span><span class="sxs-lookup"><span data-stu-id="50ea1-114">Gets or sets the manager of the workbook.</span></span>
 
-      <span data-ttu-id="45321-115">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="45321-115">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="50ea1-115">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="50ea1-115">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: manager
     fullName: manager
     langs:
@@ -108,11 +108,11 @@ items:
       return:
         type:
           - string
-  - uid: excel.Excel.Interfaces.DocumentPropertiesUpdateData.revisionNumber
+  - uid: 'excel!Excel.Interfaces.DocumentPropertiesUpdateData#revisionNumber:member'
     summary: |-
-      <span data-ttu-id="45321-116">获取工作簿的修订号。</span><span class="sxs-lookup"><span data-stu-id="45321-116">Gets the revision number of the workbook.</span></span> <span data-ttu-id="45321-117">只读。</span><span class="sxs-lookup"><span data-stu-id="45321-117">Read only.</span></span>
+      <span data-ttu-id="50ea1-116">获取工作簿的修订号。</span><span class="sxs-lookup"><span data-stu-id="50ea1-116">Gets the revision number of the workbook.</span></span> <span data-ttu-id="50ea1-117">只读。</span><span class="sxs-lookup"><span data-stu-id="50ea1-117">Read only.</span></span>
 
-      <span data-ttu-id="45321-118">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="45321-118">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="50ea1-118">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="50ea1-118">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: revisionNumber
     fullName: revisionNumber
     langs:
@@ -123,11 +123,11 @@ items:
       return:
         type:
           - number
-  - uid: excel.Excel.Interfaces.DocumentPropertiesUpdateData.subject
+  - uid: 'excel!Excel.Interfaces.DocumentPropertiesUpdateData#subject:member'
     summary: |-
-      <span data-ttu-id="45321-119">获取或设置工作簿的主题。</span><span class="sxs-lookup"><span data-stu-id="45321-119">Gets or sets the subject of the workbook.</span></span>
+      <span data-ttu-id="50ea1-119">获取或设置工作簿的主题。</span><span class="sxs-lookup"><span data-stu-id="50ea1-119">Gets or sets the subject of the workbook.</span></span>
 
-      <span data-ttu-id="45321-120">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="45321-120">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="50ea1-120">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="50ea1-120">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: subject
     fullName: subject
     langs:
@@ -138,11 +138,11 @@ items:
       return:
         type:
           - string
-  - uid: excel.Excel.Interfaces.DocumentPropertiesUpdateData.title
+  - uid: 'excel!Excel.Interfaces.DocumentPropertiesUpdateData#title:member'
     summary: |-
-      <span data-ttu-id="45321-121">获取或设置工作簿的标题。</span><span class="sxs-lookup"><span data-stu-id="45321-121">Gets or sets the title of the workbook.</span></span>
+      <span data-ttu-id="50ea1-121">获取或设置工作簿的标题。</span><span class="sxs-lookup"><span data-stu-id="50ea1-121">Gets or sets the title of the workbook.</span></span>
 
-      <span data-ttu-id="45321-122">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="45321-122">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="50ea1-122">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="50ea1-122">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: title
     fullName: title
     langs:
