--- a/docs/docs-ref-autogen/excel_1_4/excel/excel.interfaces.conditionalrangefillupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_4/excel/excel.interfaces.conditionalrangefillupdatedata.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: excel.Excel.Interfaces.ConditionalRangeFillUpdateData
-    summary: '<span data-ttu-id="1a1fd-101">一个用于更新 ConditionalRangeFill 对象上的数据的接口, 可用于 "conditionalRangeFill (</span><span class="sxs-lookup"><span data-stu-id="1a1fd-101">An interface for updating data on the ConditionalRangeFill object, for use in "conditionalRangeFill.set(</span></span><!-- --><span data-ttu-id="1a1fd-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="1a1fd-102"></span></span><!-- --><span data-ttu-id="1a1fd-103">)".</span><span class="sxs-lookup"><span data-stu-id="1a1fd-103"></span></span>'
+  - uid: 'excel!Excel.Interfaces.ConditionalRangeFillUpdateData:interface'
+    summary: '<span data-ttu-id="65a70-101">一个用于更新 ConditionalRangeFill 对象上的数据的接口，可用于 "conditionalRangeFill （</span><span class="sxs-lookup"><span data-stu-id="65a70-101">An interface for updating data on the ConditionalRangeFill object, for use in "conditionalRangeFill.set(</span></span><!-- --><span data-ttu-id="65a70-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="65a70-102"></span></span><!-- --><span data-ttu-id="65a70-103">)".</span><span class="sxs-lookup"><span data-stu-id="65a70-103"></span></span>'
     name: Excel.Interfaces.ConditionalRangeFillUpdateData
     fullName: Excel.Interfaces.ConditionalRangeFillUpdateData
     langs:
       - typeScript
     type: interface
-    package: excel
+    package: excel!
