--- a/docs/docs-ref-autogen/excel_1_4/excel/excel.interfaces.rangeviewcollectionupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_4/excel/excel.interfaces.rangeviewcollectionupdatedata.yml
@@ -1,16 +1,16 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: excel.Excel.Interfaces.RangeViewCollectionUpdateData
-    summary: '<span data-ttu-id="fbfc8-101">一个用于更新 RangeViewCollection 对象上的数据的接口, 可用于 "rangeViewCollection (</span><span class="sxs-lookup"><span data-stu-id="fbfc8-101">An interface for updating data on the RangeViewCollection object, for use in "rangeViewCollection.set(</span></span><!-- --><span data-ttu-id="fbfc8-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="fbfc8-102"></span></span><!-- --><span data-ttu-id="fbfc8-103">)".</span><span class="sxs-lookup"><span data-stu-id="fbfc8-103"></span></span>'
+  - uid: 'excel!Excel.Interfaces.RangeViewCollectionUpdateData:interface'
+    summary: '<span data-ttu-id="541d8-101">一个用于更新 RangeViewCollection 对象上的数据的接口，可用于 "rangeViewCollection （</span><span class="sxs-lookup"><span data-stu-id="541d8-101">An interface for updating data on the RangeViewCollection object, for use in "rangeViewCollection.set(</span></span><!-- --><span data-ttu-id="541d8-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="541d8-102"></span></span><!-- --><span data-ttu-id="541d8-103">)".</span><span class="sxs-lookup"><span data-stu-id="541d8-103"></span></span>'
     name: Excel.Interfaces.RangeViewCollectionUpdateData
     fullName: Excel.Interfaces.RangeViewCollectionUpdateData
     langs:
       - typeScript
     type: interface
-    package: excel
+    package: excel!
     children:
-      - excel.Excel.Interfaces.RangeViewCollectionUpdateData.items
-  - uid: excel.Excel.Interfaces.RangeViewCollectionUpdateData.items
+      - 'excel!Excel.Interfaces.RangeViewCollectionUpdateData#items:member'
+  - uid: 'excel!Excel.Interfaces.RangeViewCollectionUpdateData#items:member'
     name: items
     fullName: items
     langs:
@@ -20,4 +20,14 @@ items:
       content: 'items?: Excel.Interfaces.RangeViewData[];'
       return:
         type:
-          - 'Excel.Interfaces.RangeViewData[]'
+          - 'excel!Excel.Interfaces.RangeViewCollectionUpdateData#items~0:complex'
+references:
+  - uid: 'excel!Excel.Interfaces.RangeViewCollectionUpdateData#items~0:complex'
+    name: 'Excel.Interfaces.RangeViewData[]'
+    fullName: 'Excel.Interfaces.RangeViewData[]'
+    spec.typeScript:
+      - uid: 'excel!Excel.Interfaces.RangeViewData:interface'
+        name: Excel.Interfaces.RangeViewData
+        fullName: Excel.Interfaces.RangeViewData
+      - name: '[]'
+        fullName: '[]'
