--- a/docs/docs-ref-autogen/excel_1_5/excel/excel.interfaces.chartaxisdata.yml
+++ b/docs/docs-ref-autogen/excel_1_5/excel/excel.interfaces.chartaxisdata.yml
@@ -1,27 +1,27 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: excel.Excel.Interfaces.ChartAxisData
-    summary: <span data-ttu-id="80567-101">描述通过调用 "chartAxis ()" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="80567-101">An interface describing the data returned by calling "chartAxis.toJSON()".</span></span>
+  - uid: 'excel!Excel.Interfaces.ChartAxisData:interface'
+    summary: <span data-ttu-id="a56dc-101">描述通过调用 "chartAxis （）" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="a56dc-101">An interface describing the data returned by calling "chartAxis.toJSON()".</span></span>
     name: Excel.Interfaces.ChartAxisData
     fullName: Excel.Interfaces.ChartAxisData
     langs:
       - typeScript
     type: interface
-    package: excel
+    package: excel!
     children:
-      - excel.Excel.Interfaces.ChartAxisData.format
-      - excel.Excel.Interfaces.ChartAxisData.majorGridlines
-      - excel.Excel.Interfaces.ChartAxisData.majorUnit
-      - excel.Excel.Interfaces.ChartAxisData.maximum
-      - excel.Excel.Interfaces.ChartAxisData.minimum
-      - excel.Excel.Interfaces.ChartAxisData.minorGridlines
-      - excel.Excel.Interfaces.ChartAxisData.minorUnit
-      - excel.Excel.Interfaces.ChartAxisData.title
-  - uid: excel.Excel.Interfaces.ChartAxisData.format
+      - 'excel!Excel.Interfaces.ChartAxisData#format:member'
+      - 'excel!Excel.Interfaces.ChartAxisData#majorGridlines:member'
+      - 'excel!Excel.Interfaces.ChartAxisData#majorUnit:member'
+      - 'excel!Excel.Interfaces.ChartAxisData#maximum:member'
+      - 'excel!Excel.Interfaces.ChartAxisData#minimum:member'
+      - 'excel!Excel.Interfaces.ChartAxisData#minorGridlines:member'
+      - 'excel!Excel.Interfaces.ChartAxisData#minorUnit:member'
+      - 'excel!Excel.Interfaces.ChartAxisData#title:member'
+  - uid: 'excel!Excel.Interfaces.ChartAxisData#format:member'
     summary: |-
-      <span data-ttu-id="80567-102">表示 chart 对象的格式，包括线条和字体格式。</span><span class="sxs-lookup"><span data-stu-id="80567-102">Represents the formatting of a chart object, which includes line and font formatting.</span></span> <span data-ttu-id="80567-103">只读。</span><span class="sxs-lookup"><span data-stu-id="80567-103">Read-only.</span></span>
+      <span data-ttu-id="a56dc-102">表示 chart 对象的格式，包括线条和字体格式。</span><span class="sxs-lookup"><span data-stu-id="a56dc-102">Represents the formatting of a chart object, which includes line and font formatting.</span></span> <span data-ttu-id="a56dc-103">只读。</span><span class="sxs-lookup"><span data-stu-id="a56dc-103">Read-only.</span></span>
 
-      <span data-ttu-id="80567-104">\[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="80567-104">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="a56dc-104">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a56dc-104">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: format
     fullName: format
     langs:
@@ -31,12 +31,12 @@ items:
       content: 'format?: Excel.Interfaces.ChartAxisFormatData;'
       return:
         type:
-          - excel.Excel.Interfaces.ChartAxisFormatData
-  - uid: excel.Excel.Interfaces.ChartAxisData.majorGridlines
+          - 'excel!Excel.Interfaces.ChartAxisFormatData:interface'
+  - uid: 'excel!Excel.Interfaces.ChartAxisData#majorGridlines:member'
     summary: |-
-      <span data-ttu-id="80567-105">返回一个表示指定坐标轴的主要网格线的网格线对象。</span><span class="sxs-lookup"><span data-stu-id="80567-105">Returns a Gridlines object that represents the major gridlines for the specified axis.</span></span> <span data-ttu-id="80567-106">只读。</span><span class="sxs-lookup"><span data-stu-id="80567-106">Read-only.</span></span>
+      <span data-ttu-id="a56dc-105">返回一个表示指定坐标轴的主要网格线的网格线对象。</span><span class="sxs-lookup"><span data-stu-id="a56dc-105">Returns a Gridlines object that represents the major gridlines for the specified axis.</span></span> <span data-ttu-id="a56dc-106">只读。</span><span class="sxs-lookup"><span data-stu-id="a56dc-106">Read-only.</span></span>
 
-      <span data-ttu-id="80567-107">\[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="80567-107">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="a56dc-107">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a56dc-107">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: majorGridlines
     fullName: majorGridlines
     langs:
@@ -46,12 +46,12 @@ items:
       content: 'majorGridlines?: Excel.Interfaces.ChartGridlinesData;'
       return:
         type:
-          - excel.Excel.Interfaces.ChartGridlinesData
-  - uid: excel.Excel.Interfaces.ChartAxisData.majorUnit
+          - 'excel!Excel.Interfaces.ChartGridlinesData:interface'
+  - uid: 'excel!Excel.Interfaces.ChartAxisData#majorUnit:member'
     summary: |-
-      <span data-ttu-id="80567-108">表示两个主要刻度标记之间的间隔。</span><span class="sxs-lookup"><span data-stu-id="80567-108">Represents the interval between two major tick marks.</span></span> <span data-ttu-id="80567-109">可以设置为数字值或空字符串。</span><span class="sxs-lookup"><span data-stu-id="80567-109">Can be set to a numeric value or an empty string.</span></span> <span data-ttu-id="80567-110">返回的值始终为数字。</span><span class="sxs-lookup"><span data-stu-id="80567-110">The returned value is always a number.</span></span>
+      <span data-ttu-id="a56dc-108">表示两个主要刻度标记之间的间隔。</span><span class="sxs-lookup"><span data-stu-id="a56dc-108">Represents the interval between two major tick marks.</span></span> <span data-ttu-id="a56dc-109">可以设置为数字值或空字符串。</span><span class="sxs-lookup"><span data-stu-id="a56dc-109">Can be set to a numeric value or an empty string.</span></span> <span data-ttu-id="a56dc-110">返回的值始终为数字。</span><span class="sxs-lookup"><span data-stu-id="a56dc-110">The returned value is always a number.</span></span>
 
-      <span data-ttu-id="80567-111">\[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="80567-111">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="a56dc-111">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a56dc-111">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: majorUnit
     fullName: majorUnit
     langs:
@@ -62,11 +62,11 @@ items:
       return:
         type:
           - any
-  - uid: excel.Excel.Interfaces.ChartAxisData.maximum
+  - uid: 'excel!Excel.Interfaces.ChartAxisData#maximum:member'
     summary: |-
-      <span data-ttu-id="80567-112">表示数值轴上的最大值。</span><span class="sxs-lookup"><span data-stu-id="80567-112">Represents the maximum value on the value axis.</span></span> <span data-ttu-id="80567-113">可以设置为数字值或空字符串（对于自动坐标轴值）。</span><span class="sxs-lookup"><span data-stu-id="80567-113">Can be set to a numeric value or an empty string (for automatic axis values).</span></span> <span data-ttu-id="80567-114">返回的值始终为数字。</span><span class="sxs-lookup"><span data-stu-id="80567-114">The returned value is always a number.</span></span>
+      <span data-ttu-id="a56dc-112">表示数值轴上的最大值。</span><span class="sxs-lookup"><span data-stu-id="a56dc-112">Represents the maximum value on the value axis.</span></span> <span data-ttu-id="a56dc-113">可以设置为数字值或空字符串（对于自动坐标轴值）。</span><span class="sxs-lookup"><span data-stu-id="a56dc-113">Can be set to a numeric value or an empty string (for automatic axis values).</span></span> <span data-ttu-id="a56dc-114">返回的值始终为数字。</span><span class="sxs-lookup"><span data-stu-id="a56dc-114">The returned value is always a number.</span></span>
 
-      <span data-ttu-id="80567-115">\[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="80567-115">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="a56dc-115">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a56dc-115">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: maximum
     fullName: maximum
     langs:
@@ -77,11 +77,11 @@ items:
       return:
         type:
           - any
-  - uid: excel.Excel.Interfaces.ChartAxisData.minimum
+  - uid: 'excel!Excel.Interfaces.ChartAxisData#minimum:member'
     summary: |-
-      <span data-ttu-id="80567-116">表示数值轴上的最小值。</span><span class="sxs-lookup"><span data-stu-id="80567-116">Represents the minimum value on the value axis.</span></span> <span data-ttu-id="80567-117">可以设置为数字值或空字符串（对于自动坐标轴值）。</span><span class="sxs-lookup"><span data-stu-id="80567-117">Can be set to a numeric value or an empty string (for automatic axis values).</span></span> <span data-ttu-id="80567-118">返回的值始终为数字。</span><span class="sxs-lookup"><span data-stu-id="80567-118">The returned value is always a number.</span></span>
+      <span data-ttu-id="a56dc-116">表示数值轴上的最小值。</span><span class="sxs-lookup"><span data-stu-id="a56dc-116">Represents the minimum value on the value axis.</span></span> <span data-ttu-id="a56dc-117">可以设置为数字值或空字符串（对于自动坐标轴值）。</span><span class="sxs-lookup"><span data-stu-id="a56dc-117">Can be set to a numeric value or an empty string (for automatic axis values).</span></span> <span data-ttu-id="a56dc-118">返回的值始终为数字。</span><span class="sxs-lookup"><span data-stu-id="a56dc-118">The returned value is always a number.</span></span>
 
-      <span data-ttu-id="80567-119">\[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="80567-119">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="a56dc-119">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a56dc-119">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: minimum
     fullName: minimum
     langs:
@@ -92,11 +92,11 @@ items:
       return:
         type:
           - any
-  - uid: excel.Excel.Interfaces.ChartAxisData.minorGridlines
+  - uid: 'excel!Excel.Interfaces.ChartAxisData#minorGridlines:member'
     summary: |-
-      <span data-ttu-id="80567-120">返回一个表示指定坐标轴的次要网格线的网格线对象。</span><span class="sxs-lookup"><span data-stu-id="80567-120">Returns a Gridlines object that represents the minor gridlines for the specified axis.</span></span> <span data-ttu-id="80567-121">只读。</span><span class="sxs-lookup"><span data-stu-id="80567-121">Read-only.</span></span>
+      <span data-ttu-id="a56dc-120">返回一个表示指定坐标轴的次要网格线的网格线对象。</span><span class="sxs-lookup"><span data-stu-id="a56dc-120">Returns a Gridlines object that represents the minor gridlines for the specified axis.</span></span> <span data-ttu-id="a56dc-121">只读。</span><span class="sxs-lookup"><span data-stu-id="a56dc-121">Read-only.</span></span>
 
-      <span data-ttu-id="80567-122">\[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="80567-122">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="a56dc-122">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a56dc-122">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: minorGridlines
     fullName: minorGridlines
     langs:
@@ -106,12 +106,12 @@ items:
       content: 'minorGridlines?: Excel.Interfaces.ChartGridlinesData;'
       return:
         type:
-          - excel.Excel.Interfaces.ChartGridlinesData
-  - uid: excel.Excel.Interfaces.ChartAxisData.minorUnit
+          - 'excel!Excel.Interfaces.ChartGridlinesData:interface'
+  - uid: 'excel!Excel.Interfaces.ChartAxisData#minorUnit:member'
     summary: |-
-      <span data-ttu-id="80567-123">表示两个次要刻度标记之间的间隔。</span><span class="sxs-lookup"><span data-stu-id="80567-123">Represents the interval between two minor tick marks.</span></span> <span data-ttu-id="80567-124">可以设置为数字值或空字符串（对于自动坐标轴值）。</span><span class="sxs-lookup"><span data-stu-id="80567-124">Can be set to a numeric value or an empty string (for automatic axis values).</span></span> <span data-ttu-id="80567-125">返回的值始终为数字。</span><span class="sxs-lookup"><span data-stu-id="80567-125">The returned value is always a number.</span></span>
+      <span data-ttu-id="a56dc-123">表示两个次要刻度标记之间的间隔。</span><span class="sxs-lookup"><span data-stu-id="a56dc-123">Represents the interval between two minor tick marks.</span></span> <span data-ttu-id="a56dc-124">可以设置为数字值或空字符串（对于自动坐标轴值）。</span><span class="sxs-lookup"><span data-stu-id="a56dc-124">Can be set to a numeric value or an empty string (for automatic axis values).</span></span> <span data-ttu-id="a56dc-125">返回的值始终为数字。</span><span class="sxs-lookup"><span data-stu-id="a56dc-125">The returned value is always a number.</span></span>
 
-      <span data-ttu-id="80567-126">\[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="80567-126">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="a56dc-126">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a56dc-126">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: minorUnit
     fullName: minorUnit
     langs:
@@ -122,11 +122,11 @@ items:
       return:
         type:
           - any
-  - uid: excel.Excel.Interfaces.ChartAxisData.title
+  - uid: 'excel!Excel.Interfaces.ChartAxisData#title:member'
     summary: |-
-      <span data-ttu-id="80567-127">表示坐标轴标题。</span><span class="sxs-lookup"><span data-stu-id="80567-127">Represents the axis title.</span></span> <span data-ttu-id="80567-128">只读。</span><span class="sxs-lookup"><span data-stu-id="80567-128">Read-only.</span></span>
+      <span data-ttu-id="a56dc-127">表示坐标轴标题。</span><span class="sxs-lookup"><span data-stu-id="a56dc-127">Represents the axis title.</span></span> <span data-ttu-id="a56dc-128">只读。</span><span class="sxs-lookup"><span data-stu-id="a56dc-128">Read-only.</span></span>
 
-      <span data-ttu-id="80567-129">\[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="80567-129">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="a56dc-129">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a56dc-129">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: title
     fullName: title
     langs:
@@ -136,4 +136,11 @@ items:
       content: 'title?: Excel.Interfaces.ChartAxisTitleData;'
       return:
         type:
-          - excel.Excel.Interfaces.ChartAxisTitleData
+          - 'excel!Excel.Interfaces.ChartAxisTitleData:interface'
+references:
+  - uid: 'excel!Excel.Interfaces.ChartAxisFormatData:interface'
+    name: Excel.Interfaces.ChartAxisFormatData
+  - uid: 'excel!Excel.Interfaces.ChartGridlinesData:interface'
+    name: Excel.Interfaces.ChartGridlinesData
+  - uid: 'excel!Excel.Interfaces.ChartAxisTitleData:interface'
+    name: Excel.Interfaces.ChartAxisTitleData
