--- a/docs/docs-ref-autogen/excel_1_5/excel/excel.interfaces.charttitledata.yml
+++ b/docs/docs-ref-autogen/excel_1_5/excel/excel.interfaces.charttitledata.yml
@@ -1,23 +1,23 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: excel.Excel.Interfaces.ChartTitleData
-    summary: <span data-ttu-id="eab50-101">描述通过调用 "chartTitle ()" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="eab50-101">An interface describing the data returned by calling "chartTitle.toJSON()".</span></span>
+  - uid: 'excel!Excel.Interfaces.ChartTitleData:interface'
+    summary: <span data-ttu-id="2b676-101">描述通过调用 "chartTitle （）" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="2b676-101">An interface describing the data returned by calling "chartTitle.toJSON()".</span></span>
     name: Excel.Interfaces.ChartTitleData
     fullName: Excel.Interfaces.ChartTitleData
     langs:
       - typeScript
     type: interface
-    package: excel
+    package: excel!
     children:
-      - excel.Excel.Interfaces.ChartTitleData.format
-      - excel.Excel.Interfaces.ChartTitleData.overlay
-      - excel.Excel.Interfaces.ChartTitleData.text
-      - excel.Excel.Interfaces.ChartTitleData.visible
-  - uid: excel.Excel.Interfaces.ChartTitleData.format
+      - 'excel!Excel.Interfaces.ChartTitleData#format:member'
+      - 'excel!Excel.Interfaces.ChartTitleData#overlay:member'
+      - 'excel!Excel.Interfaces.ChartTitleData#text:member'
+      - 'excel!Excel.Interfaces.ChartTitleData#visible:member'
+  - uid: 'excel!Excel.Interfaces.ChartTitleData#format:member'
     summary: |-
-      <span data-ttu-id="eab50-102">表示图表标题的格式，包括填充和字体格式。</span><span class="sxs-lookup"><span data-stu-id="eab50-102">Represents the formatting of a chart title, which includes fill and font formatting.</span></span> <span data-ttu-id="eab50-103">只读。</span><span class="sxs-lookup"><span data-stu-id="eab50-103">Read-only.</span></span>
+      <span data-ttu-id="2b676-102">表示图表标题的格式，包括填充和字体格式。</span><span class="sxs-lookup"><span data-stu-id="2b676-102">Represents the formatting of a chart title, which includes fill and font formatting.</span></span> <span data-ttu-id="2b676-103">只读。</span><span class="sxs-lookup"><span data-stu-id="2b676-103">Read-only.</span></span>
 
-      <span data-ttu-id="eab50-104">\[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="eab50-104">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="2b676-104">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2b676-104">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: format
     fullName: format
     langs:
@@ -27,12 +27,12 @@ items:
       content: 'format?: Excel.Interfaces.ChartTitleFormatData;'
       return:
         type:
-          - excel.Excel.Interfaces.ChartTitleFormatData
-  - uid: excel.Excel.Interfaces.ChartTitleData.overlay
+          - 'excel!Excel.Interfaces.ChartTitleFormatData:interface'
+  - uid: 'excel!Excel.Interfaces.ChartTitleData#overlay:member'
     summary: |-
-      <span data-ttu-id="eab50-105">表示图表标题是否将叠加在图表上的布尔值。</span><span class="sxs-lookup"><span data-stu-id="eab50-105">Boolean value representing if the chart title will overlay the chart or not.</span></span>
+      <span data-ttu-id="2b676-105">表示图表标题是否将叠加在图表上的布尔值。</span><span class="sxs-lookup"><span data-stu-id="2b676-105">Boolean value representing if the chart title will overlay the chart or not.</span></span>
 
-      <span data-ttu-id="eab50-106">\[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="eab50-106">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="2b676-106">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2b676-106">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: overlay
     fullName: overlay
     langs:
@@ -43,11 +43,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.ChartTitleData.text
+  - uid: 'excel!Excel.Interfaces.ChartTitleData#text:member'
     summary: |-
-      <span data-ttu-id="eab50-107">表示图表的标题文本。</span><span class="sxs-lookup"><span data-stu-id="eab50-107">Represents the title text of a chart.</span></span>
+      <span data-ttu-id="2b676-107">表示图表的标题文本。</span><span class="sxs-lookup"><span data-stu-id="2b676-107">Represents the title text of a chart.</span></span>
 
-      <span data-ttu-id="eab50-108">\[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="eab50-108">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="2b676-108">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2b676-108">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: text
     fullName: text
     langs:
@@ -58,11 +58,11 @@ items:
       return:
         type:
           - string
-  - uid: excel.Excel.Interfaces.ChartTitleData.visible
+  - uid: 'excel!Excel.Interfaces.ChartTitleData#visible:member'
     summary: |-
-      <span data-ttu-id="eab50-109">表示图表标题对象是否可见的布尔值。</span><span class="sxs-lookup"><span data-stu-id="eab50-109">A boolean value the represents the visibility of a chart title object.</span></span>
+      <span data-ttu-id="2b676-109">表示图表标题对象是否可见的布尔值。</span><span class="sxs-lookup"><span data-stu-id="2b676-109">A boolean value the represents the visibility of a chart title object.</span></span>
 
-      <span data-ttu-id="eab50-110">\[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="eab50-110">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="2b676-110">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2b676-110">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: visible
     fullName: visible
     langs:
@@ -73,3 +73,6 @@ items:
       return:
         type:
           - boolean
+references:
+  - uid: 'excel!Excel.Interfaces.ChartTitleFormatData:interface'
+    name: Excel.Interfaces.ChartTitleFormatData
