--- a/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.charttrendlineupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.charttrendlineupdatedata.yml
@@ -1,25 +1,25 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: excel.Excel.Interfaces.ChartTrendlineUpdateData
-    summary: '<span data-ttu-id="bddea-101">一个用于更新 ChartTrendline 对象上的数据的接口, 可用于 "chartTrendline (</span><span class="sxs-lookup"><span data-stu-id="bddea-101">An interface for updating data on the ChartTrendline object, for use in "chartTrendline.set(</span></span><!-- --><span data-ttu-id="bddea-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="bddea-102"></span></span><!-- --><span data-ttu-id="bddea-103">)".</span><span class="sxs-lookup"><span data-stu-id="bddea-103"></span></span>'
+  - uid: 'excel!Excel.Interfaces.ChartTrendlineUpdateData:interface'
+    summary: '<span data-ttu-id="2f5e5-101">一个用于更新 ChartTrendline 对象上的数据的接口，可用于 "chartTrendline （</span><span class="sxs-lookup"><span data-stu-id="2f5e5-101">An interface for updating data on the ChartTrendline object, for use in "chartTrendline.set(</span></span><!-- --><span data-ttu-id="2f5e5-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="2f5e5-102"></span></span><!-- --><span data-ttu-id="2f5e5-103">)".</span><span class="sxs-lookup"><span data-stu-id="2f5e5-103"></span></span>'
     name: Excel.Interfaces.ChartTrendlineUpdateData
     fullName: Excel.Interfaces.ChartTrendlineUpdateData
     langs:
       - typeScript
     type: interface
-    package: excel
+    package: excel!
     children:
-      - excel.Excel.Interfaces.ChartTrendlineUpdateData.format
-      - excel.Excel.Interfaces.ChartTrendlineUpdateData.intercept
-      - excel.Excel.Interfaces.ChartTrendlineUpdateData.movingAveragePeriod
-      - excel.Excel.Interfaces.ChartTrendlineUpdateData.name
-      - excel.Excel.Interfaces.ChartTrendlineUpdateData.polynomialOrder
-      - excel.Excel.Interfaces.ChartTrendlineUpdateData.type
-  - uid: excel.Excel.Interfaces.ChartTrendlineUpdateData.format
+      - 'excel!Excel.Interfaces.ChartTrendlineUpdateData#format:member'
+      - 'excel!Excel.Interfaces.ChartTrendlineUpdateData#intercept:member'
+      - 'excel!Excel.Interfaces.ChartTrendlineUpdateData#movingAveragePeriod:member'
+      - 'excel!Excel.Interfaces.ChartTrendlineUpdateData#name:member'
+      - 'excel!Excel.Interfaces.ChartTrendlineUpdateData#polynomialOrder:member'
+      - 'excel!Excel.Interfaces.ChartTrendlineUpdateData#type:member'
+  - uid: 'excel!Excel.Interfaces.ChartTrendlineUpdateData#format:member'
     summary: |-
-      <span data-ttu-id="bddea-104">表示图表趋势线的格式。</span><span class="sxs-lookup"><span data-stu-id="bddea-104">Represents the formatting of a chart trendline.</span></span>
+      <span data-ttu-id="2f5e5-104">表示图表趋势线的格式。</span><span class="sxs-lookup"><span data-stu-id="2f5e5-104">Represents the formatting of a chart trendline.</span></span>
 
-      <span data-ttu-id="bddea-105">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="bddea-105">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="2f5e5-105">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2f5e5-105">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: format
     fullName: format
     langs:
@@ -29,12 +29,12 @@ items:
       content: 'format?: Excel.Interfaces.ChartTrendlineFormatUpdateData;'
       return:
         type:
-          - excel.Excel.Interfaces.ChartTrendlineFormatUpdateData
-  - uid: excel.Excel.Interfaces.ChartTrendlineUpdateData.intercept
+          - 'excel!Excel.Interfaces.ChartTrendlineFormatUpdateData:interface'
+  - uid: 'excel!Excel.Interfaces.ChartTrendlineUpdateData#intercept:member'
     summary: |-
-      <span data-ttu-id="bddea-106">表示趋势线的截距值。</span><span class="sxs-lookup"><span data-stu-id="bddea-106">Represents the intercept value of the trendline.</span></span> <span data-ttu-id="bddea-107">可以设置为数字值或空字符串（对于自动值）。</span><span class="sxs-lookup"><span data-stu-id="bddea-107">Can be set to a numeric value or an empty string (for automatic values).</span></span> <span data-ttu-id="bddea-108">返回的值始终为数字。</span><span class="sxs-lookup"><span data-stu-id="bddea-108">The returned value is always a number.</span></span>
+      <span data-ttu-id="2f5e5-106">表示趋势线的截距值。</span><span class="sxs-lookup"><span data-stu-id="2f5e5-106">Represents the intercept value of the trendline.</span></span> <span data-ttu-id="2f5e5-107">可以设置为数字值或空字符串（对于自动值）。</span><span class="sxs-lookup"><span data-stu-id="2f5e5-107">Can be set to a numeric value or an empty string (for automatic values).</span></span> <span data-ttu-id="2f5e5-108">返回的值始终为数字。</span><span class="sxs-lookup"><span data-stu-id="2f5e5-108">The returned value is always a number.</span></span>
 
-      <span data-ttu-id="bddea-109">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="bddea-109">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="2f5e5-109">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2f5e5-109">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: intercept
     fullName: intercept
     langs:
@@ -45,11 +45,11 @@ items:
       return:
         type:
           - any
-  - uid: excel.Excel.Interfaces.ChartTrendlineUpdateData.movingAveragePeriod
+  - uid: 'excel!Excel.Interfaces.ChartTrendlineUpdateData#movingAveragePeriod:member'
     summary: |-
-      <span data-ttu-id="bddea-110">表示图表趋势线的周期。</span><span class="sxs-lookup"><span data-stu-id="bddea-110">Represents the period of a chart trendline.</span></span> <span data-ttu-id="bddea-111">仅适用于 MovingAverage 类型的趋势线。</span><span class="sxs-lookup"><span data-stu-id="bddea-111">Only applicable for trendline with MovingAverage type.</span></span>
+      <span data-ttu-id="2f5e5-110">表示图表趋势线的周期。</span><span class="sxs-lookup"><span data-stu-id="2f5e5-110">Represents the period of a chart trendline.</span></span> <span data-ttu-id="2f5e5-111">仅适用于 MovingAverage 类型的趋势线。</span><span class="sxs-lookup"><span data-stu-id="2f5e5-111">Only applicable for trendline with MovingAverage type.</span></span>
 
-      <span data-ttu-id="bddea-112">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="bddea-112">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="2f5e5-112">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2f5e5-112">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: movingAveragePeriod
     fullName: movingAveragePeriod
     langs:
@@ -60,11 +60,11 @@ items:
       return:
         type:
           - number
-  - uid: excel.Excel.Interfaces.ChartTrendlineUpdateData.name
+  - uid: 'excel!Excel.Interfaces.ChartTrendlineUpdateData#name:member'
     summary: |-
-      <span data-ttu-id="bddea-113">表示趋势线的名称。</span><span class="sxs-lookup"><span data-stu-id="bddea-113">Represents the name of the trendline.</span></span> <span data-ttu-id="bddea-114">可设为字符串值，或者设为 Null 值（表示自动值）。</span><span class="sxs-lookup"><span data-stu-id="bddea-114">Can be set to a string value, or can be set to null value represents automatic values.</span></span> <span data-ttu-id="bddea-115">返回的值始终为字符串</span><span class="sxs-lookup"><span data-stu-id="bddea-115">The returned value is always a string</span></span>
+      <span data-ttu-id="2f5e5-113">表示趋势线的名称。</span><span class="sxs-lookup"><span data-stu-id="2f5e5-113">Represents the name of the trendline.</span></span> <span data-ttu-id="2f5e5-114">可设为字符串值，或者设为 Null 值（表示自动值）。</span><span class="sxs-lookup"><span data-stu-id="2f5e5-114">Can be set to a string value, or can be set to null value represents automatic values.</span></span> <span data-ttu-id="2f5e5-115">返回的值始终为字符串</span><span class="sxs-lookup"><span data-stu-id="2f5e5-115">The returned value is always a string</span></span>
 
-      <span data-ttu-id="bddea-116">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="bddea-116">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="2f5e5-116">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2f5e5-116">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: name
     fullName: name
     langs:
@@ -75,11 +75,11 @@ items:
       return:
         type:
           - string
-  - uid: excel.Excel.Interfaces.ChartTrendlineUpdateData.polynomialOrder
+  - uid: 'excel!Excel.Interfaces.ChartTrendlineUpdateData#polynomialOrder:member'
     summary: |-
-      <span data-ttu-id="bddea-117">表示图表趋势线的顺序。</span><span class="sxs-lookup"><span data-stu-id="bddea-117">Represents the order of a chart trendline.</span></span> <span data-ttu-id="bddea-118">仅适用于具有多项式类型的趋势线。</span><span class="sxs-lookup"><span data-stu-id="bddea-118">Only applicable for trendline with Polynomial type.</span></span>
+      <span data-ttu-id="2f5e5-117">表示图表趋势线的顺序。</span><span class="sxs-lookup"><span data-stu-id="2f5e5-117">Represents the order of a chart trendline.</span></span> <span data-ttu-id="2f5e5-118">仅适用于具有多项式类型的趋势线。</span><span class="sxs-lookup"><span data-stu-id="2f5e5-118">Only applicable for trendline with Polynomial type.</span></span>
 
-      <span data-ttu-id="bddea-119">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="bddea-119">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="2f5e5-119">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2f5e5-119">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: polynomialOrder
     fullName: polynomialOrder
     langs:
@@ -90,11 +90,11 @@ items:
       return:
         type:
           - number
-  - uid: excel.Excel.Interfaces.ChartTrendlineUpdateData.type
+  - uid: 'excel!Excel.Interfaces.ChartTrendlineUpdateData#type:member'
     summary: |-
-      <span data-ttu-id="bddea-120">表示图表趋势线的类型。</span><span class="sxs-lookup"><span data-stu-id="bddea-120">Represents the type of a chart trendline.</span></span>
+      <span data-ttu-id="2f5e5-120">表示图表趋势线的类型。</span><span class="sxs-lookup"><span data-stu-id="2f5e5-120">Represents the type of a chart trendline.</span></span>
 
-      <span data-ttu-id="bddea-121">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="bddea-121">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="2f5e5-121">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2f5e5-121">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: type
     fullName: type
     langs:
@@ -104,4 +104,16 @@ items:
       content: 'type?: Excel.ChartTrendlineType | "Linear" | "Exponential" | "Logarithmic" | "MovingAverage" | "Polynomial" | "Power";'
       return:
         type:
-          - Excel.ChartTrendlineType | "Linear" | "Exponential" | "Logarithmic" | "MovingAverage" | "Polynomial" | "Power"
+          - 'excel!Excel.Interfaces.ChartTrendlineUpdateData#type~0:complex'
+references:
+  - uid: 'excel!Excel.Interfaces.ChartTrendlineFormatUpdateData:interface'
+    name: Excel.Interfaces.ChartTrendlineFormatUpdateData
+  - uid: 'excel!Excel.Interfaces.ChartTrendlineUpdateData#type~0:complex'
+    name: Excel.ChartTrendlineType | "Linear" | "Exponential" | "Logarithmic" | "MovingAverage" | "Polynomial" | "Power"
+    fullName: Excel.ChartTrendlineType | "Linear" | "Exponential" | "Logarithmic" | "MovingAverage" | "Polynomial" | "Power"
+    spec.typeScript:
+      - uid: 'excel!Excel.ChartTrendlineType:enum'
+        name: Excel.ChartTrendlineType
+        fullName: Excel.ChartTrendlineType
+      - name: ' | "Linear" | "Exponential" | "Logarithmic" | "MovingAverage" | "Polynomial" | "Power"'
+        fullName: ' | "Linear" | "Exponential" | "Logarithmic" | "MovingAverage" | "Polynomial" | "Power"'
