--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.textconditionalformatdata.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.textconditionalformatdata.yml
@@ -1,21 +1,21 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: excel.Excel.Interfaces.TextConditionalFormatData
-    summary: <span data-ttu-id="ab8a0-101">描述通过调用 "textConditionalFormat ()" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="ab8a0-101">An interface describing the data returned by calling "textConditionalFormat.toJSON()".</span></span>
+  - uid: 'excel!Excel.Interfaces.TextConditionalFormatData:interface'
+    summary: <span data-ttu-id="f9676-101">描述通过调用 "textConditionalFormat （）" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="f9676-101">An interface describing the data returned by calling "textConditionalFormat.toJSON()".</span></span>
     name: Excel.Interfaces.TextConditionalFormatData
     fullName: Excel.Interfaces.TextConditionalFormatData
     langs:
       - typeScript
     type: interface
-    package: excel
+    package: excel!
     children:
-      - excel.Excel.Interfaces.TextConditionalFormatData.format
-      - excel.Excel.Interfaces.TextConditionalFormatData.rule
-  - uid: excel.Excel.Interfaces.TextConditionalFormatData.format
+      - 'excel!Excel.Interfaces.TextConditionalFormatData#format:member'
+      - 'excel!Excel.Interfaces.TextConditionalFormatData#rule:member'
+  - uid: 'excel!Excel.Interfaces.TextConditionalFormatData#format:member'
     summary: |-
-      <span data-ttu-id="ab8a0-102">返回一个 format 对象, 该对象封装条件格式字体、填充、边框和其他属性。</span><span class="sxs-lookup"><span data-stu-id="ab8a0-102">Returns a format object, encapsulating the conditional formats font, fill, borders, and other properties.</span></span> <span data-ttu-id="ab8a0-103">只读。</span><span class="sxs-lookup"><span data-stu-id="ab8a0-103">Read-only.</span></span>
+      <span data-ttu-id="f9676-102">返回一个 format 对象，该对象封装条件格式字体、填充、边框和其他属性。</span><span class="sxs-lookup"><span data-stu-id="f9676-102">Returns a format object, encapsulating the conditional formats font, fill, borders, and other properties.</span></span> <span data-ttu-id="f9676-103">只读。</span><span class="sxs-lookup"><span data-stu-id="f9676-103">Read-only.</span></span>
 
-      <span data-ttu-id="ab8a0-104">\[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ab8a0-104">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="f9676-104">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f9676-104">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: format
     fullName: format
     langs:
@@ -25,12 +25,12 @@ items:
       content: 'format?: Excel.Interfaces.ConditionalRangeFormatData;'
       return:
         type:
-          - excel.Excel.Interfaces.ConditionalRangeFormatData
-  - uid: excel.Excel.Interfaces.TextConditionalFormatData.rule
+          - 'excel!Excel.Interfaces.ConditionalRangeFormatData:interface'
+  - uid: 'excel!Excel.Interfaces.TextConditionalFormatData#rule:member'
     summary: |-
-      <span data-ttu-id="ab8a0-105">条件格式的规则。</span><span class="sxs-lookup"><span data-stu-id="ab8a0-105">The rule of the conditional format.</span></span>
+      <span data-ttu-id="f9676-105">条件格式的规则。</span><span class="sxs-lookup"><span data-stu-id="f9676-105">The rule of the conditional format.</span></span>
 
-      <span data-ttu-id="ab8a0-106">\[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ab8a0-106">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="f9676-106">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f9676-106">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: rule
     fullName: rule
     langs:
@@ -40,4 +40,9 @@ items:
       content: 'rule?: Excel.ConditionalTextComparisonRule;'
       return:
         type:
-          - excel.Excel.ConditionalTextComparisonRule
+          - 'excel!Excel.ConditionalTextComparisonRule:interface'
+references:
+  - uid: 'excel!Excel.Interfaces.ConditionalRangeFormatData:interface'
+    name: Excel.Interfaces.ConditionalRangeFormatData
+  - uid: 'excel!Excel.ConditionalTextComparisonRule:interface'
+    name: Excel.ConditionalTextComparisonRule
