--- a/docs/docs-ref-autogen/excel_1_6/excel/excel.interfaces.pagelayoutdata.yml
+++ b/docs/docs-ref-autogen/excel_1_6/excel/excel.interfaces.pagelayoutdata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.PageLayoutData:interface'
-    summary: 描述通过调用 "页面布局（）" 返回的数据的接口。
+    summary: 描述通过调用返回的数据的接口`pageLayout.toJSON()`<!-- -->.
     name: Excel.Interfaces.PageLayoutData
     fullName: Excel.Interfaces.PageLayoutData
     langs:
