--- a/docs/docs-ref-autogen/excel_1_6/excel/excel.interfaces.styleupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_6/excel/excel.interfaces.styleupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.StyleUpdateData:interface'
-    summary: '用于更新样式对象上的数据的接口，可用于 "style. set （<!-- -->{ ... }<!-- -->)".'
+    summary: '用于更新样式对象上的数据的接口，可用于`style.set({ ... })`<!-- -->.'
     name: Excel.Interfaces.StyleUpdateData
     fullName: Excel.Interfaces.StyleUpdateData
     langs:
